--- a/en/b/Bosphorus.776975.wikitext
+++ b/en/b/Bosphorus.776975.wikitext
@@ -37,14 +37,14 @@ From medieval {{etyl|la|en}} {{term|Bosphorus|lang=la}}, from {{etyl|grc|en}} {{
 * Armenian: {{t|hy|Բոսֆոր}}
 * Asturian: {{t|ast|Bósforo|m}}, {{t|ast|Bósforo}}
 * Azeri: {{t|az|Bosfor Boğazı}}
-* Bashkir: {{t|ba|Босфор|tr=Bosfór}}
+* Bashkir: {{t|ba|Босфор}}
 * Basque: {{t|eu|Bosforo itsasartea}}
-* Belarusian: {{t|be|Басфор|m}}
+* Belarusian: {{t|be|Басфо́р|m}}
 * Breton: {{t|br|Bosfor}}
-* Bulgarian: {{t|bg|Босфор|m}}
+* Bulgarian: {{t|bg|Босфо́р|m}}
 * Catalan: {{t|ca|Bòsfor|m}}
 * Chinese:
-*: Mandarin: {{t|cmn|博斯普魯斯海峽}}, {{t+|cmn|博斯普鲁斯海峡|tr=Bósīpǔlǔsī hǎixiá}}
+*: Mandarin: {{t+|cmn|博斯普魯斯海峽}}, {{t+|cmn|博斯普鲁斯海峡|tr=Bósīpǔlǔsī hǎixiá}}
 * Chuvash: {{t|cv|Босфор}}
 * Czech: {{t+|cs|Bospor|m}}
 * Danish: {{t|da|Bosporus}}
@@ -60,7 +60,7 @@ From medieval {{etyl|la|en}} {{term|Bosphorus|lang=la}}, from {{etyl|grc|en}} {{
 * Greek: {{t+|el|Βόσπορος|m}}
 *: Ancient: {{t|grc|Βόσπορος|m}}
 * Hebrew: {{t|he|בּוֹסְפּוֹרוּס|m|tr=bosporus}}
-* Hindi: {{t|hi|बोस्पोरुस जलसन्धि|tr=bosporus jalsandhi}}
+* Hindi: {{t|hi|बोस्पोरुस जलसन्धि}}
 * Hungarian: {{t+|hu|Boszporusz}}
 * Icelandic: {{t|is|Bosporussund}}
 * Indonesian: {{t|id|Selat Bosporus}}
@@ -80,11 +80,11 @@ From medieval {{etyl|la|en}} {{term|Bosphorus|lang=la}}, from {{etyl|grc|en}} {{
 * Norwegian: {{t|no|Bosporos}}
 * Occitan: {{t|oc|Bosfòr|m}}
 * Old English: {{t|ang|Bosporos}}
-* Persian: {{t|fa|تنگه بسفر|tr=tanga Bosfor}}
+* Persian: {{t|fa|تنگه بسفر|tr=tanga bosfor}}
 * Polish: {{t+|pl|Bosfor|m}}
 * Portuguese: {{t|pt|Bósforo|m}}
 * Romanian: {{t|ro|Bosfor}}
-* Russian: {{t|ru|Босфор|m}}
+* Russian: {{t|ru|Босфо́р|m}}
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|Босфор|m|sc=Cyrl}}, {{t|sh|Боспор|m}}
 *: Roman: {{t|sh|Bosfor|m}}, {{t|sh|Bospor|m}}
@@ -96,7 +96,7 @@ From medieval {{etyl|la|en}} {{term|Bosphorus|lang=la}}, from {{etyl|grc|en}} {{
 * Tatar: {{t|tt|Босфор бугазы}}, {{t|tt|Истанбул бугазы}}
 * Thai: {{t|th|ช่องแคบบอสฟอรัส|tr=chông kâep bòtforrát}}
 * Turkish: {{t+|tr|İstanbul Boğazı}}
-* Ukrainian: {{t|uk|Босфор|m}}
+* Ukrainian: {{t|uk|Босфо́р|m}}
 * Urdu: {{t|ur|آبنائے باسفورس}}
 * Uyghur: {{t|ug|ئىستانبۇل بوغازى}}
 * Vietnamese: {{t|vi|eo biển Bosporus}}, {{t|vi|eo biển Bospho}}
