--- a/en/s/seize.26061.wikitext
+++ b/en/s/seize.26061.wikitext
@@ -70,6 +70,7 @@ Earlier {{m|en|seise}}, from {{etyl|enm|en}} {{m|enm|seisen}}, {{m|enm|sesen}}, 
 * Korean: {{t+|ko|붙잡다|tr=butjapda}}
 {{trans-mid}}
 * Latin: {{t|la|capere}}, {{t|la|possideo}}
+* Ngazidja Comorian: {{t|zdj|zingara|alt=uzingara}}, {{t|zdj|siha|alt=usiha}}
 * North Frisian: {{t|frr|gripe}}
 * Norwegian: {{t|no|gripe}}
 * Old English: {{t|ang|niman}}
