--- a/en/d/doncella.803303.wikitext
+++ b/en/d/doncella.803303.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-{{etyl|es|en}}, literally "maid". Compare {{m|en|damsel}}.
+{{bor|en|es|maid}}. Compare {{m|en|damsel}}.
 
 ===Noun===
 {{en-noun}}
@@ -16,7 +16,7 @@
 ==Spanish==
 
 ===Etymology===
-From a {{etyl|VL.|es}} {{m|la|*domnicella}} (compare {{etyl|fr|-}} {{term|demoiselle|lang=fr}}), based on {{etyl|la|es}} {{term|domina|lang=la||lady, mistress}}.
+From a {{inh|es|VL.|*domnicella}} (compare {{etyl|fr|-}} {{m|fr|demoiselle}}), based on {{inh|es|la|domina||lady, mistress}}.
 
 ===Pronunciation===
 * {{a|Castilian}} {{IPA|/donˈθe.ʎa/|lang=es}}
@@ -30,6 +30,8 @@ From a {{etyl|VL.|es}} {{m|la|*domnicella}} (compare {{etyl|fr|-}} {{term|demois
 
 ====Related terms====
 * {{l|es|doncel}}
+
+{{catlangcode|es|Female|People}}
 
 [[es:doncella]]
 [[ko:doncella]]
