--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -50,6 +50,7 @@ From {{etyl|enm|en}} {{term|rabet|lang=enm}}, from {{etyl|frm|en}} dialect (comp
 
 =====Translations=====
 {{trans-top|mammal}}
+* Afrikaans: {{t|af|konyn}}
 * Aguaruna: {{t|agr|wapuhuš}}
 * Ainu: {{t|ain|イセポ|tr=isepo}}
 * Alabama: {{t|akz|chokfi}}
