/* Derived terms */ <κύων#35543678>

--- a/en/κ/κύων.4255.wikitext
+++ b/en/κ/κύων.4255.wikitext
@@ -18,6 +18,7 @@ From {{etyl|ine-pro|grc}} {{m|ine-pro|*ḱwṓ}}. Cognates include Latin {{term|
 {{grc-decl|form=MF-full|κῠ́ων|κῠνός|VS=κῠ́ον / κῠ́ων|DP=κῠσῐ́ / κῠσῐ́ν / κῠ́νεσσῐ}}
 
 ====Derived terms====
+* {{l|grc|κῠνόδους}}
 * {{l|grc|κῠνόμαζον}}
 
 ====Descendants====
