/* Pronunciation */ : see [[Appendix:Italian pronunciation]] <qua#35556762>

--- a/en/q/qua.4315.wikitext
+++ b/en/q/qua.4315.wikitext
@@ -100,7 +100,7 @@ To ask for an object, use ''[[quan]]'' instead.
 ==Italian==
 
 ===Pronunciation===
-* {{IPA|/kwa/|lang=it}}
+* {{IPA|/kwa*/|lang=it}}
 * {{audio|It-qua.ogg|Audio|lang=it}}
 * {{rhymes|a|lang=it}}
 
