--- a/en/b/bosom friend.741206.wikitext
+++ b/en/b/bosom friend.741206.wikitext
@@ -11,9 +11,11 @@
 
 ====Translations====
 {{trans-top|very close friend}}
+* Arabic: {{t-needed|ar}}
 * Chinese:
 *: Mandarin: {{t+|cmn|知己|tr=zhījǐ|sc=Hani}}, {{t+|cmn|知音|tr=zhīyīn|sc=Hani}}
 * Dutch: {{t+|nl|getrouwe|m|f}}, {{t|nl|boezem vriend}}
+* Finnish: {{t-needed|fi}}
 * French: {{t|fr|ami(e) intime|m|f}}
 * German: {{t+|de|Busenfreund|m}}
 * Hungarian: {{t+|hu|kebelbarát}}
