t+de:[[Siebenschläfer]] ([[WT:EDIT|Assisted]]) <dormouse#35714767>

--- a/en/d/dormouse.8238.wikitext
+++ b/en/d/dormouse.8238.wikitext
@@ -82,6 +82,7 @@ The word is sometimes considered to come from an {{etyl|xno|-}} derivative of {{
 {{trans-bottom}}
 
 {{trans-top|A person who sleeps a great deal}}
+* German: {{t+|de|Siebenschläfer}}
 * Spanish: {{t+|es|lirón|m}}
 {{trans-mid}}
 {{trans-bottom}}
