t+de:[[Siebenschläfer]] ([[WT:EDIT|Assisted]]) <dormouse#35714783>

--- a/en/d/dormouse.8238.wikitext
+++ b/en/d/dormouse.8238.wikitext
@@ -39,7 +39,7 @@ The word is sometimes considered to come from an {{etyl|xno|-}} derivative of {{
 * French: {{t+|fr|loir|m}}
 * Friulian: {{t|fur|glîr}}
 * Galician: {{t|gl|leirón cincento}}
-* German: {{t+|de|Bilch|m}}, {{t+|de|Schläfer|m}}, {{t+|de|Schlafmaus|f}}
+* German: {{t+|de|Bilch|m}}, {{t+|de|Schläfer|m}}, {{t+|de|Schlafmaus|f}}, {{t+|de|Siebenschläfer|m}}
 * Greek: {{t|el|δασομυωξός|m}}
 * Hungarian: {{t+|hu|pele}}
 * Icelandic: {{t|is|heslimús}}
