--- a/en/s/staff.34070.wikitext
+++ b/en/s/staff.34070.wikitext
@@ -97,7 +97,7 @@ From {{etyl|enm|en}} {{m|enm|staf}}, from {{etyl|ang|en}} {{term|stæf|lang=ang}
 * Slovak: {{t+|sk|palica|f}}, {{t|sk|žrď|f}}, {{t|sk|bakuľa|f}}
 * Spanish: {{t+|es|bastón|m}}, {{t+|es|báculo|m}}
 * Swedish: {{t+|sv|stav|c}}
-* Turkish: {{t+|tr|baston}}
+* Turkish: {{t+|tr|baston}}, {{t+|tr|asa}}, {{t+|tr|çomak}}
 * Zulu: {{t|zu|induku|c9|c10}}
 {{trans-bottom}}
 
