--- a/en/s/staff.34070.wikitext
+++ b/en/s/staff.34070.wikitext
@@ -181,6 +181,7 @@ From {{etyl|enm|en}} {{m|enm|staf}}, from {{etyl|ang|en}} {{term|stæf|lang=ang}
 * French: doter en personnel
 {{trans-mid}}
 * Greek: {{t+|el|επανδρώνω}}
+* Turkish: {{t|tr|kadrolamak}}
 * Welsh: {{t+|cy|staffio}}
 {{trans-bottom}}
 
