--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -98,7 +98,7 @@ From {{etyl|enm|en}} {{term|benden|lang=enm}}, from {{etyl|ang|en}} {{term|benda
 * Maori: {{t|mi|ngawaki}} {{qualifier|refers to knees}}, {{t|mi|whakapiko}}, {{t|mi|whatiwhati}} {{qualifier|Refers to bending the legs when running}}
 * Norwegian: {{t+|no|bøye}}
 * Polish: {{t+|pl|zgiąć}}
-* Portuguese: {{t+|pt|dobrar}}, {{t+|pt|curvar}}, {{t+|pt|vergar}
+* Portuguese: {{t+|pt|dobrar}}, {{t+|pt|curvar}}
 * Romanian: {{t+|ro|îndoi}}, {{t+|ro|curba}}
 * Russian: {{t+|ru|сгиба́ть}}, {{t+|ru|изгиба́ть}}, {{t+|ru|гнуть}}
 * Scottish Gaelic: {{t|gd|crom}}, {{t|gd|lùb}}
