--- a/en/s/staff.34070.wikitext
+++ b/en/s/staff.34070.wikitext
@@ -50,6 +50,7 @@ From {{etyl|enm|en}} {{m|enm|staf}}, from {{etyl|ang|en}} {{term|stæf|lang=ang}
 * See also [[Wikisaurus:stick]]
 
 ====Derived terms====
+* {{l/en|general staff}}
 * {{l/en|staff sling}}
 
 ====Related terms====
