--- a/en/u/ungratefulness.742233.wikitext
+++ b/en/u/ungratefulness.742233.wikitext
@@ -8,7 +8,7 @@
 # The state of being [[ungrateful]].
 
 ====Translations====
-{{trans-see|ingratitude}}
+{{trans-see|the state of being ungrateful|ingratitude}}
 
 [[el:ungratefulness]]
 [[ko:ungratefulness]]
