--- a/en/q/quadruped.4320.wikitext
+++ b/en/q/quadruped.4320.wikitext
@@ -24,14 +24,15 @@
 * German: {{t|de|Vierfüßer|m}}, {{t|de|Vierfüßerin|f}}, {{t|de|Vierfüßler|m}}, {{t|de|Vierfüßlerin|f}}, {{t|de|Quadrupeder|m}}, {{t|de|Quadrupede|f}}
 * Icelandic: {{t|is|ferfætlingur|m}}
 * Japanese: {{t|ja|四肢動物|tr=ししどうぶつ, shishi dōbutsu|sc=Jpan}}
-{{trans-mid}}
 * Maori: {{t|mi|kīrehe}}
+{{trans-mid}}
 * Navajo: {{t|nv|naaldlooshii}}
 * Polish: {{t+|pl|czworonóg|m-an}}
 * Portuguese: {{t+|pt|quadrúpede|m}}
 * Russian: {{t+|ru|четвероногий|n|alt=четвероно́гое}} {{qualifier|живо́тное}}, {{t+|ru|тетрапо́д|m|tr=tɛtrapód}}
 * Spanish: {{t+|es|cuadrúpedo|m}}, {{t|es|tetrápodo|m}}
 * Swedish: {{t|sv|fyrfotadjur|n}}, {{t|sv|tetrapod|c}}, {{t|sv|fyrfoting|c}}
+* Tagalog: {{t|tl|hayop na aapating-paa}}
 * Telugu: {{t+|te|చతుష్పదము|tr=chatush-padamu}}
 * Tocharian B: {{t|txb|śwerppewä}}
 * Volapük: {{qualifier|♂♀}} {{t+|vo|folfutaf}}, {{qualifier|♂}} {{t|vo|hifolfutaf}}, {{qualifier|♀}} {{t|vo|jifolfutaf}}, {{qualifier|♂♀}} {{t+|vo|follögaf}}, {{qualifier|♂}} {{t|vo|hifollögaf}}, {{qualifier|♀}} {{t|vo|jifollögaf}}
