t+zdj:[[ra]] ([[WT:EDIT|Assisted]]) <blow#35780403>

--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -173,6 +173,7 @@ From {{etyl|enm|en}} {{term|blowen|lang=enm}}, from {{etyl|ang|en}} {{m|ang|blā
 * Macedonian: {{t|mk|дува}}
 * Malay: {{t|ms|tiup}}, {{t|ms|hembus}}
 * Maori: {{t|mi|ihi}}
+* Ngazidja Comorian: {{t|zdj|ra|alt=hura}}
 * North Frisian: {{qualifier|Föhr-Amrum}} {{t|frr|blä}}
 * Old Frisian: {{t|ofs|blā}}
 * Polish: {{t+|pl|dmuchać}}, {{t+|pl|dąć}}, {{t+|pl|wiać}}
