--- a/en/s/staff.34070.wikitext
+++ b/en/s/staff.34070.wikitext
@@ -153,6 +153,7 @@ From {{etyl|enm|en}} {{m|enm|staf}}, from {{etyl|ang|en}} {{term|stæf|lang=ang}
 *: Roman: {{t+|sh|osoblje|n}}
 * Spanish: {{t+|es|personal|m}}, {{t+|es|equipo|m}}, {{t+|es|empleado|m}}, {{t+|es|plantilla|f}}
 * Swedish: {{t+|sv|personal|c}}
+* Tagalog: {{t|tl|kalupunan}}
 * Thai: {{t|th|พนักงาน|tr=pá-nák ngaan|sc=Thai}}
 * Turkish: {{t+|tr|personel}}
 * Uyghur: {{t|ug|خىزمەتچى|tr=xizmetchi|sc=ug-Arab}}
