--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -309,6 +309,7 @@ From {{etyl|enm|en}} {{term|blowen|lang=enm}}, from {{etyl|ang|en}} {{m|ang|blā
 * Japanese: {{t+|ja|爆発|tr=[[ばくはつ]]する, bakuhatsusuru|alt=爆発する|sc=Jpan}}
 * Korean: {{t+|ko|터지다|sc=Kore}}
 * Macedonian: {{t|mk|се распрснува}}
+* Polish: {{t+|pl|wybuchać|impf}}, {{t+|pl|wybuchnąć|pf}}
 * Portuguese: {{t+|pt|explodir}}, {{t+|pt|estourar}}
 * Russian: {{t+|ru|взрыва́ться|impf}}, {{t+|ru|взорва́ться|pf}}, {{t|ru|взлета́ть на во́здух|impf}}, {{t+|ru|взлете́ть на во́здух|pf}}
 * Swahili: {{t+|sw|panchi}}
