t+fr:[[ile]] ([[WT:EDIT|Assisted]]) <island#35916564>

--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -100,7 +100,7 @@ From earlier {{m|en|iland}}, from {{etyl|enm|en}} {{m|enm|iland}}, {{m|enm|yland
 * Faroese: {{t+|fo|oyggj|f}}, {{qualifier|small island, or river-island}} {{t|fo|hólmur|m}}
 * Fijian: {{t+|fj|yanuyanu}}
 * Finnish: {{t+|fi|saari}}
-* French: {{t+|fr|île|f}}
+* French: {{t+|fr|île|f}}, {{t+|fr|ile|f}} {{qualifier|alternative spelling}}
 *: Old French: {{t|fro|isle|f}}
 * Friulian: {{t|fur|isule|f}}, {{t|fur|ìsule|f}}
 * Galician: {{t+|gl|illa|f}}
