--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -8,7 +8,7 @@
 * {{homophones|lang=en|mil}}
 
 ===Etymology 1===
-From {{etyl|enm|en}} {{m|enm|mille}}, {{etyl|ang|en}} {{m|ang|mylen}}.
+From {{etyl|enm|en}} {{m|enm|mille}}, {{etyl|ang|en}} {{m|ang|mylen}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*mulīnō}} or {{m|gem-pro|*mulīnaz}} from {{etyl|VL.|en}} {{term|lang=la|molinus}} from classical {{etyl|la|en}} {{term|lang=la|mola}}.
 
 ====Noun====
 {{en-noun}}
