--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -130,7 +130,7 @@ From {{etyl|enm|en}} {{m|enm|squirel}}, {{m|enm|squyrelle}}, from {{etyl|xno|en}
 * Russian: {{t+|ru|бе́лка|f}}
 * Sami:
 *: Northern Sami: {{t|se|oarri}}
-* Sanskrit: {{t|sa|चिक्रोड़|alt=चिक्रोड़ः|sc=Deva}}
+* Sanskrit: {{t|sa|चिक्रोड़|sc=Deva}}
 * Sardinian: {{t|sc|schirrittu|m}}, {{t|sc|schirrimatta|f}}, {{t|sc|iscojàttulu|m}}
 * Scottish Gaelic: {{t|gd|feòrag}}
 * Sebop: {{t|sib|pu'an}}
