--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -117,6 +117,7 @@ From {{etyl|enm|en}} {{m|enm|squirel}}, {{m|enm|squyrelle}}, from {{etyl|xno|en}
 *: Bokmål: {{t+|nb|ekorn|m|n}}
 *: Nynorsk: {{t|nn|ekorn|n}}, {{t|nn|ikorn|n}}
 * Occitan: {{t+|oc|esquiròl|m}}
+* Old Church Slavonic: {{t|cu|бѣлъ|sc=Cyrs}}, {{t|cu|вѣверица|sc=Cyrs}}
 * Old English: {{t|ang|ācweorna|m}}
 * Old Norse: {{t|non|íkorni|m}}
 * Persian: {{t+|fa|سنجاب|tr=sanjâb|sc=fa-Arab}}, {{t|fa|وروره|tr=varvare|sc=fa-Arab}}
@@ -124,6 +125,8 @@ From {{etyl|enm|en}} {{m|enm|squirel}}, {{m|enm|squyrelle}}, from {{etyl|xno|en}
 * Polish: {{t+|pl|wiewiórka|f}}
 * Portuguese: {{t+|pt|esquilo|m}}
 * Powhatan: {{t|pim|messanik}}
+* Proto-Germanic: {{l|gem-pro|*aikwernô}}
+* Proto-Slavic: {{l|sla-pro|*bělъ}}, {{l|sla-pro|*věverica}} 
 * Romani: {{t|rom|viaveritsa|f}}
 * Romanian: {{t+|ro|veveriță|f}}
 * Romansch: {{t|rm|stgilat|m}}
