/* Ancient Greek */ <κύων#35943964>

--- a/en/κ/κύων.4255.wikitext
+++ b/en/κ/κύων.4255.wikitext
@@ -1,13 +1,13 @@
 ==Ancient Greek==
 
 ===Etymology===
-From {{etyl|ine-pro|grc}} {{m|ine-pro|*ḱwṓ}}. Cognates include Latin {{term|canis|lang=la}}, Sanskrit {{term|sc=Deva|श्वन्|tr=śván|lang=sa}} and Old English {{term|hund|lang=ang}} (English {{term|hound|lang=en}}). The final {{m|grc||-ν}} in the nominative singular which was absent in {{m|ine-pro|*ḱwṓ}} was restored in Greek by analogy to other forms in the paradigm.
+From {{etyl|ine-pro|grc}} {{m|ine-pro|*ḱwṓ}}. Cognates include Latin {{m|la|canis}}, Sanskrit {{m|sa|श्वन्|tr=śván}} and Old English {{m|ang|hund}} (English {{m|en|hound}}). The final {{m|grc||-ν}} in the nominative singular which was absent in {{m|ine-pro|*ḱwṓ}} was restored in Greek by analogy to other forms in the paradigm.
 
 ===Pronunciation===
 {{grc-IPA|w=κύ˘ων}}
 
 ===Noun===
-{{grc-noun|head=κῠ́ων|κῠνός|m-f|third}}
+{{grc-noun|head=κῠ́ων|κῠνός|m|g2=f|third}}
 
 # a [[dog]]
 # a [[bitch]]
@@ -15,7 +15,7 @@ From {{etyl|ine-pro|grc}} {{m|ine-pro|*ḱwṓ}}. Cognates include Latin {{term|
 # an [[offensive]] [[person]]
 
 ====Declension====
-{{grc-decl|form=MF-full|κῠ́ων|κῠνός|VS=κῠ́ον / κῠ́ων|DP=κῠσῐ́ / κῠσῐ́ν / κῠ́νεσσῐ}}
+{{grc-decl|form=MF-full|κῠ́ων|κῠνός|VS=κῠ́ον, κῠ́ων|DP=κῠσῐ́, κῠσῐ́ν, κῠ́νεσσῐ}}
 
 ====Derived terms====
 * {{l|grc|κῠνόδους}}
