--- a/en/g/go public.742281.wikitext
+++ b/en/g/go public.742281.wikitext
@@ -4,7 +4,7 @@
 '''[[go]] [[public]]'''
 
 # {{context|idiomatic|intransitive|lang=en}} Make [[public]], announce [[publicly]] or to the [[press]].
-# {{context|idiomatic|intransitive|lang=en}} To an [[initial public offering]].
+# {{context|idiomatic|intransitive|lang=en}} To launch an [[initial public offering]].
 
 [[Category:English verbs]]
 
