--- a/en/月/月.4427.wikitext
+++ b/en/月/月.4427.wikitext
@@ -3,7 +3,9 @@
 
 ===Etymology===
 {{Han etyl}}
-{{liushu|p}}, originally of the [[crescent]] [[moon]].
+{{liushu|p}} - pictographic representation of a [[crescent moon]].
+
+Also simplified from [[龠]] in [[钥]].
 
 ====Usage notes====
 Do not confuse {{lang|mul|月}} with {{m|mul|⺼|sc=Hani}}, a form of {{m|mul|肉||flesh, meat}} when used as the left-hand radical of a character. {{m|mul|⺼|sc=Hani}} is used for parts of the body such as {{m|mul|背||back}} or {{m|mul|肝||liver}}. These may be written identically as {{lang|mul|月}}, but in careful use they are distinguished, with the inside of {{lang|mul|⺼|sc=Hani}} being written with unattached diagonal strokes. This is particularly an issue in looking up characters by radical; compare the [[Index:Chinese radical/月|月 index]] and [[Index:Chinese radical/肉|肉 index]].
