--- a/en/a/advertisement.4312.wikitext
+++ b/en/a/advertisement.4312.wikitext
@@ -64,6 +64,7 @@ From {{etyl|frm|en}} {{term|advertissement||statement calling attention|lang=frm
 * Czech: {{t+|cs|reklama|f}}
 * Danish: {{t+|da|reklame}}
 * Dutch: {{t+|nl|reclame|f|m}}, {{t+|nl|advertentie|f}}
+* Erzya: {{t|myv|рамавтомапель}}
 * Esperanto: {{t|eo|reklamo}}
 * Estonian: {{t|et|reklaam}}, {{t+|et|propaganda}}, {{t|et|kuulutus}}
 * Finnish: {{t+|fi|mainos}}, {{t+|fi|mainostus}}
