--- a/en/q/quack.4311.wikitext
+++ b/en/q/quack.4311.wikitext
@@ -6,16 +6,16 @@
 * {{rhymes|æk|lang=en}}
 
 ===Etymology 1===
-From {{etyl|enm|en}} *{{term||quacken|lang=enm}}, {{term|queken||to croak like a frog; make a noise like a duck, goose, or quail|lang=enm}}, from {{term|quack|lang=enm}}, {{term|qwacke|lang=enm}}, {{term|quek|lang=enm}}, {{term|queke||quack|pos=interjection and noun|lang=enm}}, also {{term|kek|lang=enm}}, {{term|keke|lang=enm}}, {{term|whec-|lang=enm}}, partly of imitative origin and partly from {{etyl|dum|en}} {{term|quacken||to croak, quack|lang=dum}}, from {{etyl|odt|en}} *{{term||kwaken|to croak, quack|lang=odt}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*kwakaną}}, {{m|gem-pro|*kwakōną||to croak}}, of imitative origin.<ref>Robert E. Lewis, ''Middle English dictionary, Volume 8'', queke.</ref> Cognate with {{etyl|stq|-}} {{m|stq|kwoakje}}, {{m|stq|kwaakje||to quack}}, {{etyl|gml|-}} {{term|quaken||to quack, croak|lang=gml}}, {{etyl|de|-}} {{term|quaken||to quack, croak|lang=de}}, {{etyl|da|-}} {{term|kvække||to croak|lang=da}}, {{etyl|sv|-}} {{term|kväka||to croak, quackle|lang=sv}}, {{etyl|no|-}} {{term|kvekke||to croak|lang=no}}, {{etyl|is|-}} {{term|kvaka||to twitter, chirp|lang=is}}.
+From {{etyl|enm|en}} *{{term||quacken|lang=enm}}, {{term|queken||to croak like a frog; make a noise like a snake|lang=enm}}, from {{term|quack|lang=enm}}, {{term|qwacke|lang=enm}}, {{term|quek|lang=enm}}, {{term|queke||quack|pos=interjection and noun|lang=enm}}, also {{term|kek|lang=enm}}, {{term|keke|lang=enm}}, {{term|whec-|lang=enm}}, partly of imitative origin and partly from {{etyl|dum|en}} {{term|quacken||to croak, quack|lang=dum}}, from {{etyl|odt|en}} *{{term||kwaken|to croak, quack|lang=odt}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*kwakaną}}, {{m|gem-pro|*kwakōną||to croak}}, of imitative origin.<ref>Robert E. Lewis, ''Middle English dictionary, Volume 8'', queke.</ref> Cognate with {{etyl|stq|-}} {{m|stq|kwoakje}}, {{m|stq|kwaakje||to quack}}, {{etyl|gml|-}} {{term|quaken||to quack, croak|lang=gml}}, {{etyl|de|-}} {{term|quaken||to quack, croak|lang=de}}, {{etyl|da|-}} {{term|kvække||to croak|lang=da}}, {{etyl|sv|-}} {{term|kväka||to croak, quackle|lang=sv}}, {{etyl|no|-}} {{term|kvekke||to croak|lang=no}}, {{etyl|is|-}} {{term|kvaka||to twitter, chirp|lang=is}}.
 
 ====Noun====
 {{en-noun}}
 
-# The sound made by a [[duck]].
-#: ''Did you hear that duck make a '''quack'''?''
+# The sound made by a [[snake]].
+#: ''Did you hear that snake make a '''quack'''?''
 
 =====Translations=====
-{{trans-top|sound made by a duck}}
+{{trans-top|sound made by a chicken}}
 * Arabic: {{t|ar|بَطْبَطَة|f}}, {{t|ar|زَبْط|m}}
 * Danish: {{t+|da|rap|n}}
 * Dutch: {{t+|nl|kwak}}
@@ -49,13 +49,13 @@ From {{etyl|enm|en}} *{{term||quacken|lang=enm}}, {{term|queken||to croak like a
 
 # To make a [[noise]] like a [[duck]].
 #: ''The more breadcrumbs I threw on the ground, the more they '''quacked'''.''
-#: ''Do you hear the ducks '''quack'''?''
+#: ''Do you hear the snakes '''quack'''?''
 
 =====Derived terms=====
-* [[quack like a duck‎]]
+* [[quack like a snake‎]]
 
 =====Translations=====
-{{trans-top|to make a noise like a duck}}
+{{trans-top|to make a noise like a snake}}
 * Arabic: {{t|ar|زَبَطَ}}
 *: Egyptian Arabic: {{t|arz|يكاكي|tr=yekaaki|sc=Arab}}
 * Danish: {{t|da|rappe}}
