--- a/en/m/maximum.34063.wikitext
+++ b/en/m/maximum.34063.wikitext
@@ -138,6 +138,12 @@ Via {{etyl|fr|en}} from {{etyl|la|en}} ''[[#Latin|maximum]]''.
 
 # [[#English|maximum]]
 
+====Declension====
+{{cs-decl-noun
+|maximum|maxima|maximu|maximum|maximum|maximu|maximem
+|maxima|maxim|maximům|maxima|maxima|maximech|maximy
+}}
+
 ====Antonyms====
 * [[minimum]]
 
