/* Translations */ zh-tsp→t <blow#35974062>

--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -392,7 +392,7 @@ From {{etyl|enm|en}} {{term|blowen|lang=enm}}, from {{etyl|ang|en}} {{m|ang|blā
 
 {{trans-top|to leave}} <!--15-->
 * Chinese:
-*: Mandarin: {{zh-tsp|離開|离开|líkāi}}
+*: Mandarin: {{t|cmn|離開|sc=Hani}}, {{t|cmn|离开|tr=líkāi|sc=Hani}}
 * Finnish: {{t+|fi|häipyä}}
 * French: {{t+|fr|se casser}}, se {{t+|fr|tirer}}, [[mettre]] les {{t+|fr|voiles}}
 * Korean: {{t+|ko|그만두다|sc=Kore}}
