--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -89,13 +89,14 @@ From {{etyl|enm|en}} {{term|again|lang=enm}}, {{term|ayain|lang=enm}}, {{m|enm|a
 
 {{trans-top|another time}}
 * Afrikaans: {{t|af|weer}}, {{t|af|alweer}}
+* Albanian: {{t+|sq|përsëri}}
 * Arabic: {{t|ar|مَرَّة أُخْرَى|f|tr=marra ʾuḵrā}}, {{t|ar|كَرَّة أُخْرَى|f|tr=karra ʾuḵrā}} {{qualifier|adverbial accusative used}}, {{t|ar|ثَانِيَةً}}
 *: Egyptian Arabic: {{t|arz|تاني|tr=tani|sc=Arab}}, {{t|arz|كمان|tr=kaman - kman|sc=Arab}}
 * Aragonese: {{t-needed|an}}
 * Armenian: {{t+|hy|էլի}}, {{t+|hy|կրկին}}, {{qualifier|Eastern-Armenian}} {{t|hy|նորից}}, {{qualifier|Western-Armenian}} {{t|hy|նորեն}}
 * Asturian: {{t|ast|otra vez}}, {{t|ast|otra vegada}}, {{t|ast|de nuevo}}
 * Avar: {{t|av|жеги}}
-* Azeri: {{t-needed|az}}
+* Azeri: {{t|az|yenidən}}, {{t|az|yenə}}
 * Bashkir: {{t|ba|тағы ла|sc=Cyrl}}, {{t|ba|тағы берҙе|sc=Cyrl}}
 * Basque: {{t|eu|berriro}}
 * Belarusian: {{t|be|зноў|sc=Cyrl}}, {{t|be|яшчэ́ раз|sc=Cyrl}}
@@ -104,7 +105,7 @@ From {{etyl|enm|en}} {{term|again|lang=enm}}, {{term|ayain|lang=enm}}, {{m|enm|a
 *: Tashelhit: {{t|shi|dax}}
 * Breton: {{t+|br|adarre}}
 * Bulgarian: {{t+|bg|отново}}, {{t+|bg|пак}}, {{t+|bg|отново|sc=Cyrl}}, {{t+|bg|пак|sc=Cyrl}}
-* Burmese: {{t|my|နောက်တဖန်|sc=Mymr}}, {{t+|my|ထပ်|sc=Mymr}}
+* Burmese: {{t|my|နောက်တဖန်|sc=Mymr}}, {{t+|my|ထပ်|sc=Mymr}}, {{t+|my|ပြန်လှန်|sc=Mymr}}
 * Catalan: {{t|ca|una altra vegada}}, {{t|ca|de nou}}
 * Cherokee: {{t|chr|ᎠᏏᏇ|tr=asique|sc=Cher}}
 * Chinese:
@@ -135,11 +136,13 @@ From {{etyl|enm|en}} {{term|again|lang=enm}}, {{term|ayain|lang=enm}}, {{m|enm|a
 * Italian: {{t+|it|di nuovo}}, {{t+|it|ancora}}
 * Japanese: {{t+|ja|又|tr=mata}}, {{t+|ja|また|tr=mata}}, {{t|ja|再び|tr=ふたたび, futatabi}}, {{t|ja|もう一度|tr=mō ichido}}, {{t+|ja|あらためて|tr=aratamete}}
 * Kannada: {{t-needed|kn}}
+* Kazakh: {{t|kk|қайтадан|sc=Cyrl}}, {{t+|kk|жаңа|sc=Cyrl}}, {{t|kk|қайта|sc=Cyrl}}, {{t|kk|жаңадан|sc=Cyrl}}, {{t|kk|тағы|sc=Cyrl}}
 * Khmer: {{t+|km|ទៀត|tr=dtīət|sc=Khmr}}, {{t|km|ម្ដងទៀត|tr=mdorng dtīət|sc=Khmr}}
-{{trans-mid}}
 * Korean: {{t+|ko|다시|sc=Kore}}, {{t+|ko|또|sc=Kore}}
 * Kurdish: {{t+|ku|dîsa|sc=ku-Arab}}
 *: Sorani: {{t+|ku|دیسان}}, {{t|ku|هه‌مدیس}}, {{t|ku|دوباره‌}}
+{{trans-mid}}
+* Kyrgyz: {{t+|ky|дагы|sc=Cyrl}}, {{t+|ky|кайтадан|sc=Cyrl}}, {{t|ky|жаңыдан|sc=Cyrl}}
 * Lao: {{t|lo|ອີກ|tr='iik|sc=Laoo}}
 * Latin: {{t|la|denuo}}, {{t|la|iterum}}
 * Latvian: {{t|lv|atkal}}
@@ -179,12 +182,16 @@ From {{etyl|enm|en}} {{term|again|lang=enm}}, {{term|ayain|lang=enm}}, {{m|enm|a
 * Spanish: {{t|es|otra vez}}, {{t+|es|de nuevo}}, {{t+|es|nuevamente}}
 * Swedish: {{t+|sv|igen}}, {{t+|sv|ånyo}}, {{t+|sv|åter}}, {{t+|sv|på nytt}}, {{t+|sv|å nyo}}
 * Tagalog: {{t|tl|muli}}, {{t|tl|nanaman}}, {{t|tl|ulit}}
+* Tajik: {{t|tg|аз нав}}, {{t+|tg|боз}}
+* Tatar: {{t|tt|кабаттан}}
 * Telugu: {{t+|te|మళ్లీ}}, {{t|te|మరలా}}
 * Thai: {{t+|th|อีก|tr=èek}}, {{t+|th|ใหม่|tr=mài}}
 * Tok Pisin: {{t|tpi|gen}}
 * Turkish: {{t+|tr|yeniden}}, {{t+|tr|tekrar}}, {{t+|tr|gene}}, {{t+|tr|yine}}, {{t+|tr|bir daha}}
+* Turkmen: {{t|tk|ýene}}, {{t+|tk|baryp}}
 * Ukrainian: {{t|uk|зно́ву|sc=Cyrl}}, {{t|uk|знов|sc=Cyrl}}, {{t|uk|ще раз|sc=Cyrl}}
 * Urdu: {{t|ur|پھر|tr=phir|sc=ur-Arab}}, {{t|ur|پھر سے|tr=phir se|sc=ur-Arab}}, {{t+|ur|دوبارہ|tr=dubārā|sc=ur-Arab}}
+* Uzbek: {{t+|uz|yana}}, {{t+|uz|qaytadan}}, {{t+|uz|qayta}}
 * Vietnamese: {{t+|vi|lại}}
 * Welsh: {{t|cy|eto}}
 * West Frisian: {{t|fy|wer}}
