t+tl:[[palaramihan]] t-balance ([[WT:EDIT|Assisted]]) <multiplication#35979686>

--- a/en/m/multiplication.26254.wikitext
+++ b/en/m/multiplication.26254.wikitext
@@ -31,11 +31,11 @@ When applied to whole numbers, multiplication can be considered as repeated addi
 * Hungarian: {{t+|hu|szorzás}}
 * Italian: {{t+|it|moltiplicazione|f}}
 * Japanese: {{t|ja|掛け算|tr=かけざん, kakezan}}, {{t|ja|乗法|tr=じょうほう, jōhō}}
-{{trans-mid}}
 * Malay: {{t|ms|pendaraban}}
 * Manx: {{t|gv|yl-raghey|m}}
 * Maori: {{t|mi|whakareanga}}
 * Nogai: {{t|nog|керелев}}
+{{trans-mid}}
 * Norwegian:
 *: Bokmål: {{t+|nb|multiplikasjon|m}}
 *: Nynorsk: {{t|nn|multiplikasjon|m}}
@@ -46,6 +46,7 @@ When applied to whole numbers, multiplication can be considered as repeated addi
 * Russian: {{t+|ru|умноже́ние|n}}
 * Spanish: {{t+|es|multiplicación|f}}
 * Swedish: {{t+|sv|multiplikation|c}}
+* Tagalog: {{t|tl|palaramihan}}
 * Telugu: {{t+|te|గుణకారం}}
 * Turkish: {{t+|tr|çarpma}}, {{t|tr|çarpma işlemi}}
 * Ukrainian: {{t|uk|мно́ження|n|sc=Cyrl}}
@@ -68,6 +69,7 @@ When applied to whole numbers, multiplication can be considered as repeated addi
 * Portuguese: {{t+|pt|multiplicação|f}}
 * Romanian: {{t+|ro|înmulțire|f}}, {{t+|ro|multiplicare|f}}
 * Swedish: {{t+|sv|multiplikation|c}}
+* Tagalog: {{t|tl|palaramihan}}
 * Turkish: {{t|tr|çarpma işlemi}}
 * Ukrainian: {{t|uk|мно́ження|n|sc=Cyrl}}
 {{trans-bottom}}
