t+tl:[[palabawasan]] t-balance ([[WT:EDIT|Assisted]]) <subtraction#35979690>

--- a/en/s/subtraction.26255.wikitext
+++ b/en/s/subtraction.26255.wikitext
@@ -28,9 +28,9 @@
 * German: {{t+|de|Subtraktion|f}}, {{t|de|Abziehen|n}}
 * Greek: {{t+|el|αφαίρεση|f}}
 * Hungarian: {{t+|hu|kivonás}}
-{{trans-mid}}
 * Ido: {{t+|io|sustraciono}}
 * Italian: {{t+|it|sottrazione|f}}
+{{trans-mid}}
 * Japanese: {{t|ja|引き算|tr=ひきざん, hikizan|sc=Jpan}}, {{t|ja|減法|tr=げんぽう, genpō|sc=Jpan}}
 * Norwegian:
 *: Bokmål: {{t|nb|subtraksjon|m}}
@@ -43,6 +43,7 @@
 * Slovak: {{t|sk|odčítanie|n}}
 * Spanish: {{t+|es|resta|f}}, {{t+|es|substracción|f}}
 * Swedish: {{t+|sv|subtraktion}}
+* Tagalog: {{t|tl|palabawasan}}
 * Telugu: {{t+|te|తీసివేత|tr=teesiveata|sc=Telu}}
 * Turkish: {{t+|tr|çıkarma}}, {{t|tr|çıkarma işlemi}}
 {{trans-bottom}}
@@ -57,13 +58,14 @@
 * Hungarian: {{t+|hu|kivonás}}
 * Ido: {{t+|io|sustraciono}}
 * Italian: {{t+|it|sottrazione|f}}
-{{trans-mid}}
 * Maori: {{t|mi|tangohanga}}
+{{trans-mid}}
 * Norwegian:
 *: Bokmål: {{t|nb|subtraksjon|m}}
 *: Nynorsk: {{t|nn|subtraksjon|m}}
 * Portuguese: {{t+|pt|subtração|f}}
 * Russian: {{t+|ru|вычита́ние|n}}
+* Tagalog: {{t|tl|palabawasan}}
 * Telugu: {{t+|te|తీసివేత|tr=teesiveata|sc=Telu}}
 * Turkish: {{t|tr|çıkarma işlemi}}
 {{trans-bottom}}
