--- a/en/v/vortical.855979.wikitext
+++ b/en/v/vortical.855979.wikitext
@@ -42,7 +42,7 @@ From (the stem of) {{etyl|la|en}} {{term|vortex|lang=la}} {{suffix||al|lang=en}}
 * Polish: {{t|pl|wirowy|m}}
 * Portuguese: {{t+|pt|vortiginoso}}
 * Russian: {{t+|ru|вихревой}}, {{t+|ru|вращательный}}
-* Spanish: {{t-needed|es}}
+* Spanish: {{t|es|vortiginoso|m}}
 * Vietnamese: {{t-needed|vi}}
 {{trans-bottom}}
 
