--- a/en/c/cult of personality.856173.wikitext
+++ b/en/c/cult of personality.856173.wikitext
@@ -25,6 +25,7 @@
 {{trans-mid}}
 * Japanese: {{t|ja|個人崇拝|tr=こじんすうはい, kojin sūhai|sc=Jpan}}
 * Korean: {{t|ko|개인숭배|sc=Kore}}
+* Kurdish: {{t|ku|kulta şexsiyetek|sc=ku-Arab}}
 * Latvian: {{t|lv|personības kults|m}}
 * Lithuanian: {{t|lt|asmenybės kultas|m}}
 * Polish: {{t-needed|pl}}
