--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -143,10 +143,11 @@ From {{etyl|enm|en}}, from {{etyl|ang|en}} {{term|þing|lang=ang||tr=thing}}, fr
 * Japanese: {{t+|ja|物|tr=もの, mono|sc=Jpan}}
 * Kazakh: {{t|kk|нәрсе|sc=Cyrl}}
 * Khmer: {{t+|km|របស់|tr=rɔbɑh|sc=Khmr}}
+* Kinyarwanda: {{t|rw|ikintu|c7|c8}}
 * Korean: {{t+|ko|물건|sc=Kore}}
 * Kyrgyz: {{t+|ky|нерсе|sc=Cyrl}}
-* Ladin: {{t|lld|cossa|f}}
 {{trans-mid}}
+* Ladin: {{t|lld|cossa|f}}
 * Ladino: {{t|lad|koza}}
 * Lao: {{t|lo|ສິ່ງ|sc=Laoo}}
 * Latin: {{t+|la|rēs|f}}, {{t+|la|ens|n}}
