--- a/en/r/rasante.802841.wikitext
+++ b/en/r/rasante.802841.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-{{etyl|fr|en}}, present participle of {{term|raser}} to graze.
+From {{etyl|fr|en}} {{m|fr|rasant}}, present participle of {{m|fr|raser||to graze}}.
 
 ===Adjective===
 {{en-adj}}
