t+ay:[[wat’a]] t+tts:[[เกาะ]] t+nov:[[isle]] ([[WT:EDIT|Assisted]]) <island#35982604>

--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -59,7 +59,7 @@ From earlier {{m|en|iland}}, from {{etyl|enm|en}} {{m|enm|iland}}, {{m|enm|yland
 * Armenian: {{t+|hy|կղզի}}
 * Assamese: {{t|as|দ্বীপ|tr=dwip|sc=Beng}}
 * Asturian: {{t+|ast|islla|f}}
-* Aymara: {{t-needed|ay}}
+* Aymara: {{t|ay|wat’a}}
 * Azeri: {{t+|az|ada}}
 * Baba Malay: {{t|mbf|pulo}}
 * Baekje: {{t|pkc|斯麻|tr=sama}}
@@ -124,7 +124,7 @@ From earlier {{m|en|iland}}, from {{etyl|enm|en}} {{m|enm|iland}}, {{m|enm|yland
 * Interlingue: {{t|ie|insul}}
 * Iranun: {{t|ill|pulu}}
 * Irish: {{t+|ga|oileán|m}}, {{t|ga|inis|f}}
-* Isan: {{t-needed|tts}}
+* Isan: {{t|tts|เกาะ|tr=don}}
 * Italian: {{t+|it|isola|f}}
 * Japanese: {{t+|ja|島|tr=[[しま]], shima}}
 * Javanese: {{t|jv|pulo}}
@@ -178,7 +178,7 @@ From earlier {{m|en|iland}}, from {{etyl|enm|en}} {{m|enm|iland}}, {{m|enm|yland
 *: Bokmål: {{t+|nb|øy|m|f}}
 *: Nynorsk: {{t|nn|øy|f}}
 * Nottoway-Meherrin: {{t|nwy|eohtessieh}}
-* Novial: {{t-needed|nov}}
+* Novial: {{t|nov|isle}}
 * Occitan: {{t+|oc|illa|f}}
 * Okinawan: {{t|ryu|しま|tr=sima}}
 * Old English: {{t|ang|īeġ|f}}
