--- a/en/m/multiplication.26254.wikitext
+++ b/en/m/multiplication.26254.wikitext
@@ -18,6 +18,7 @@ When applied to whole numbers, multiplication can be considered as repeated addi
 ====Translations====
 {{trans-top|process}}
 * Arabic: {{t+|ar|ضرب}}
+* Armenian: {{t+|hy|բազմացում}}
 * Chinese: [[乘法]] (chéng fǎ)
 * Chinese Characters: [[乘]] / [[乗]]
 * Czech: {{t|cs|násobení|n}}
@@ -55,6 +56,7 @@ When applied to whole numbers, multiplication can be considered as repeated addi
 {{trans-bottom}}
 
 {{trans-top|calculation}}
+* Armenian: {{t+|hy|բազմապատկում}}
 * Dutch: {{t+|nl|vermenigvuldiging|f}}
 * Esperanto: {{t|eo|multipliko}}
 * French: {{t+|fr|multiplication|f}}
