--- a/en/s/subtraction.26255.wikitext
+++ b/en/s/subtraction.26255.wikitext
@@ -11,7 +11,7 @@ From {{etyl|LL|en}} {{m|la|subtractio}}.
 {{en-noun|~}}
 
 # {{context|arithmetic|uncountable|lang=en}} The [[process]] of [[subtract]]ing a [[number]] from another.
-# {{context|arithmetic|countable}lang=en}} A [[calculation]] involving [[subtract]]ing.
+# {{context|arithmetic|countable|lang=en}} A [[calculation]] involving [[subtract]]ing.
 #: ''The teacher has set us ten subtractions to do by tomorrow.''
 # The [[removal]] of something.
 #: ''The '''subtraction''' of the wealth from the economy will result in recession.''
