t+hy:[[հանում]] ([[WT:EDIT|Assisted]]) <subtraction#35983212>

--- a/en/s/subtraction.26255.wikitext
+++ b/en/s/subtraction.26255.wikitext
@@ -18,6 +18,7 @@ From {{etyl|LL|en}} {{m|la|subtractio}}.
 
 ====Translations====
 {{trans-top|process}}
+* Armenian: {{t+|hy|հանում}}
 * Catalan: {{t|ca|sostracció|f}}
 * Chinese:
 *: Mandarin: {{t+|cmn|減法|sc=Hani}}, {{t|cmn|减法|tr=jiǎnfǎ|sc=Hani}}
@@ -52,6 +53,7 @@ From {{etyl|LL|en}} {{m|la|subtractio}}.
 {{trans-bottom}}
 
 {{trans-top|calculation}}
+* Armenian: {{t+|hy|հանում}}
 * Catalan: {{t|ca|subtracció|f}}
 * Dutch: {{t+|nl|aftrekking|f}}
 * Esperanto: {{t|eo|subtraho}}
