--- a/en/n/no kidding.742290.wikitext
+++ b/en/n/no kidding.742290.wikitext
@@ -19,6 +19,7 @@
 {{trans-mid}}
 * French: {{t+|fr|sans blague}}
 * German: {{qualifier|colloquial|vulgar}} {{t|de|ohne Scheiß}}, {{qualifier|colloquial}} {{t|de|im Ernst}}
+* Italian: {{t+|it|sul serio}}, {{t+|it|seriamente}}, {{t|it|scherzi a parte}}
 * Portuguese: {{t|pt|não brinca}}
 * Russian: {{t+|ru|неуже́ли?}}
 * Spanish: {{t+|es|no me digas}}
