--- a/en/p/prank call.776672.wikitext
+++ b/en/p/prank call.776672.wikitext
@@ -7,6 +7,9 @@
 #* '''1961''', "April Fool Phone Calls Decline Sharply in City," ''New York Times'', 2 Apr., p. 87.
 #*: Until noon only 251 '''prank calls''' to the Bronx Zoo had been sifted out, compared with the day-long total of 3352 on April 1, 1960. The pranksters would call Wellington 3-1500 to talk with a "Mr. Fox" (or Lyon, Bear or Wolf).
 
+====Synonyms====
+* [[crank call]]
+
 ====Translations====
 {{trans-top|practical joke made using the telephone}}
 * Arabic: {{t|ar|اِتِّصَال مَقْلَب|m}}
@@ -15,6 +18,9 @@
 {{trans-mid}}
 * Swedish: {{t|sv|busringning|c}}
 {{trans-bottom}}
+
+===See also===
+* [[nuisance call]]
 
 [[Category:en:Telephony]]
 
