t+yi:[[חזיר]] t-balance ([[WT:EDIT|Assisted]]) <pig#36029610>

--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -326,8 +326,8 @@ British slang sense "police officer" from at least 1785.<ref>'''2003''', Victori
 * Greek: {{t+|el|γουρούνι|n}}
 * Icelandic: {{t+|is|svín|n}}
 * Irish: {{t|ga|alpuire|m}}
-{{trans-mid}}
 * Italian: {{t+|it|porco|m}}, {{t+|it|maiale|m}}
+{{trans-mid}}
 * Macedonian: {{t|mk|свиња|f}}
 * Norwegian: {{t|no|storeter|m}}
 * Portuguese: {{t+|pt|porco|m}}
@@ -338,6 +338,7 @@ British slang sense "police officer" from at least 1785.<ref>'''2003''', Victori
 * Swahili: {{t+|sw|nguruwe}}
 * Turkish: {{t+|tr|obur}}
 * Welsh: {{t+|cy|mochyn|m}}
+* Yiddish: {{t|yi|חזיר|m|tr=khazer}}
 * Zazaki: {{t|zza|séxur}}
 {{trans-bottom}}
 
