--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -2,6 +2,7 @@
 ==English==
 {{wikipedia}}
 {{wikispecies|Sus}}
+[[Image:Sow with piglet.jpg|thumb|right|250px|Domestic '''pigs''' (''Sus scrofa domestica'')]]
 
 ===Etymology 1===
 From {{etyl|enm|en}} {{m|enm|pigge||pig, pigling}} (originally a term for a young pig, with adult pigs being {{m|enm|swine}}), apparently from {{etyl|ang|en}} {{m|ang|*picga}} (attested only in compounds, such as {{m|ang|picgbrēad||mast, pig-fodder}}). Compare Middle Dutch {{m|dum|pogge}}, {{m|dum|puggen}}, {{m|dum|pegsken||pigling}}. Connection to early {{etyl|nl|-}} {{m|nl|bigge}} (modern {{etyl|nl|-}} {{m|nl|big||piglet}}), {{etyl|fy|-}} {{m|fy|bigge||pigling}}{{,}} and similar terms in {{etyl|gml|-}} are sometimes proposed, "but the phonology is difficult"<ref name="NED">''A new English dictionary on historical principles''</ref> and other sources say the words are "almost certainly not" related.<ref>{{R:Dictionary.com}}</ref>
@@ -14,7 +15,6 @@ British slang sense "police officer" from at least 1785.<ref>'''2003''', Victori
 * {{rhymes|ɪɡ|lang=en}}
 
 ====Noun====
-[[Image:Sow with piglet.jpg|thumb|right|250px|Domestic pigs (''Sus scrofa domestica'')]]
 {{en-noun}}
 
 # Any of several [[mammalian]] species of the genus ''[[Sus]]'', having [[cloven]] [[hooves]], [[bristle]]s and a [[nose]] adapted for [[digging]]; especially the [[domesticated]] [[farm]] [[animal]] ''[[Sus scrofa]]''.
@@ -24,8 +24,8 @@ British slang sense "police officer" from at least 1785.<ref>'''2003''', Victori
 #*: Weanlings grow into feeder '''pigs''', and feeder '''pigs''' grow into slaughter hogs. {{...}} Ultimately the end use for virtually all '''pigs''' and hogs is to be slaughtered for the production of pork and other products.
 # {{context|uncountable|lang=en}} The [[edible]] [[meat]] of such an animal; [[pork]].
 #: ''Some religions prohibit their adherents from eating '''pig'''.''
-#* '''2005''', Ross Eddy Osborn, ''Thorns of a Tainted Rose'' (ISBN 0741425319), page 196:
-#*: "Miss Chastene, could you fetch me out an extra plate of '''pig''' and biscuit[?] My partner can't do without your marvelous cooking."
+#* '''2005''', Ross Eddy Osborn, ''Thorns of a Tainted Rose'' (ISBN 0741425319), [https://books.google.com.au/books?id=cdg7kQFFcYoC&pg=PA196&dq=%22Miss+Chastene,+could+you+fetch+me+out+an+extra+plate+of+pig%22&hl=en&sa=X&redir_esc=y#v=onepage&q=%22Miss%20Chastene%2C%20could%20you%20fetch%20me%20out%20an%20extra%20plate%20of%20pig%22&f=false page 196]:
+#*: "Miss Chastene, could you fetch me out an extra plate of '''pig''' and biscuit. My partner can't do without your marvelous cooking."
 # Someone who overeats or eats rapidly and noisily.
 #: ''You gluttonous '''pig'''! Now that you've eaten all the cupcakes, there will be none for the party!''
 # A [[nasty]] or [[disgusting]] person, usually male.
