--- a/en/z/zeppola.856126.wikitext
+++ b/en/z/zeppola.856126.wikitext
@@ -27,6 +27,7 @@ From the {{etyl|it|en}} {{term|lang=it|zeppola}}
 {{wikipedia|lang=it}}
 {{it-noun|f|zeppole}}
 
-# Any of several varieties of traditional fried [[sweet]] from southern Italy
+# [[#English|zeppola]] {{gloss|any of several varieties of traditional fried [[sweet]] from southern Italy}}.
+# {{context|colloquial|lang=it}} [[lisp]] {{gloss|mispronunciation of the sounds /s/ and /z/}}
 
 [[pl:zeppola]]
