--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -239,7 +239,6 @@ British slang sense "police officer" from at least 1785.<ref>'''2003''', Victori
 * Ngazidja Comorian: {{t|zdj|purunku}}
 * Nivkh: {{t|niv|овӻоӈ|tr=ovx̌oŋ|sc=Cyrl}}
 * Norman: {{t|nrf|couochon|m}}, {{t|nrf|bête à saie|f}}, {{t|nrf|por|m}}, {{t|nrf|gronneux|m}}, {{t|nrf|moussieu|m}}, {{t|nrf|quétot|m}}
-* Northern Sami: {{t|se|spiidni}}
 * Norwegian: {{t+|no|svin|n}}, {{t+|no|gris|m}}
 * Novial: {{t-needed|nov}}
 * Occitan: {{t+|oc|pòrc|m}}
@@ -258,6 +257,7 @@ British slang sense "police officer" from at least 1785.<ref>'''2003''', Victori
 * Sami:
 *: Inari Sami: {{t|smn|šahe}}
 *: Kildin Sami: {{t|sjd|шагкь}}
+*: Northern Sami: {{t|se|spiidni}}
 *: Skolt Sami: {{t|sms|šââ´ǩǩ}}
 * Samoan: {{t|sm|pua'a}}
 * Sanskrit: {{t|sa|सूकर|tr=sūkara|sc=Deva}}
