--- a/en/c/consumption.34058.wikitext
+++ b/en/c/consumption.34058.wikitext
@@ -10,8 +10,9 @@ From {{etyl|fro|en}} {{term|consumpcion|lang=fro}}, from {{etyl|la|en}} {{term|c
 ===Noun===
 {{en-noun|-}}
 
-# The act of [[consume|consuming]] something.
+# The act of [[consume|consuming]], i.e., burning something.
 #: ''The fire's '''consumption''' of the forest caused ecological changes.''
+# The act of eating, drinking or using.
 # The amount [[consume|consumed]].
 #: ''gross national '''consumption'''''
 # {{context|pathology|lang=en}} The [[waste away|wasting-away]] of the human body through [[disease]].
