/* Translations */ t-check instead of t <money bag#36129709>

--- a/en/m/money bag.720269.wikitext
+++ b/en/m/money bag.720269.wikitext
@@ -27,7 +27,7 @@
 {{trans-bottom}}
 
 {{checktrans-top}}
-* Greek: {{t|el|πουγκί|n}}
+* Greek: {{t-check|el|πουγκί|n}}
 {{trans-bottom}}
 
 ===Anagrams===
