--- a/en/u/unpunctual.802727.wikitext
+++ b/en/u/unpunctual.802727.wikitext
@@ -1,10 +1,18 @@
 ==English==
 
+===Etymology===
+From {{affix|en|un-|punctual}}.
+
 ===Adjective===
 {{en-adj|-}}
 
 # Not [[punctual]].
 #: ''Jim was so '''unpunctual'''; always late!''
+
+====Translations====
+{{trans-top|not punctual}}
+{{trans-mid}}
+{{trans-bottom}}
 
 [[et:unpunctual]]
 [[ku:unpunctual]]
