--- a/en/u/unpunctual.802727.wikitext
+++ b/en/u/unpunctual.802727.wikitext
@@ -9,6 +9,10 @@ From {{affix|en|un-|punctual}}.
 # Not [[punctual]].
 #: ''Jim was so '''unpunctual'''; always late!''
 
+====Derived terms====
+* [[unpunctually]]
+* [[unpunctualness]]
+
 ====Translations====
 {{trans-top|not punctual}}
 * Finnish: {{t|fi|epätäsmällinen}}
