pl, fix ety <malapportionment#36144923>

--- a/en/m/malapportionment.803562.wikitext
+++ b/en/m/malapportionment.803562.wikitext
@@ -1,10 +1,11 @@
 ==English==
 
 ===Etymology===
-''[[mal]]'' (bad, wrong) + ''[[apportionment]]''
+{{prefix|en|mal|apportionment}}
 
 ===Noun===
-{{en-noun|-}}
+{{en-noun|~}}
+
 # {{context|politics|lang=en}} Any [[system]] where one group has significantly more [[influence]] than another, such as when voting [[district]]s are unevenly spread out across a [[population]] (compare [[gerrymandering]]).
 
 [[io:malapportionment]]
