/* Noun */ # {{misspelling of|staph|lang=en}} <staff#36149464>

--- a/en/s/staff.34070.wikitext
+++ b/en/s/staff.34070.wikitext
@@ -43,6 +43,7 @@ From {{etyl|enm|en}} {{m|enm|staf}}, from {{etyl|ang|en}} {{term|stæf|lang=ang}
 # {{label|en|engineering}} An [[arbor]], as of a wheel or a pinion of a watch.
 # {{label|en|surgery}} The grooved director for the gorget, or knife, used in cutting for stone in the bladder.
 # {{label|en|military}} An establishment of officers in various departments attached to an army, to a section of an army, or to the commander of an army. The general's staff consists of those officers about his person who are employed in carrying his commands into execution.
+# {{misspelling of|staph|lang=en}}
 
 ====Synonyms====
 * {{sense|music}} [[stave]]
