/* Derived terms */ [[play to the whistle]] <whistle#36159319>

--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -35,6 +35,7 @@ From {{etyl|enm|en}} {{term|whistlen|lang=enm}}; {{etyl|ang|en}} {{term|hwistlan
 * [[clean as a whistle‎]]
 * [[it's not the whistle that pulls the train]]
 {{rel-mid3}}
+* [[play to the whistle]]
 * [[wet one's whistle]]
 * [[whistle-blower]]
 * [[whistle pig]]
