--- a/en/c/consumption.34058.wikitext
+++ b/en/c/consumption.34058.wikitext
@@ -56,6 +56,7 @@ From {{etyl|fro|en}} {{term|consumpcion|lang=fro}}, from {{etyl|la|en}} {{term|c
 * Scottish Gaelic: {{t|gd|caitheamh|f}}
 * Spanish: {{t+|es|consumo|m}}
 * Swedish: {{t+|sv|konsumtion|c}}
+* Tagalog: {{t|tl|pananaid}}
 {{trans-bottom}}
 
 {{trans-top|the amount consumed}}
@@ -67,8 +68,8 @@ From {{etyl|fro|en}} {{term|consumpcion|lang=fro}}, from {{etyl|la|en}} {{term|c
 * French: {{t+|fr|consommation|f}}
 * German: {{t+|de|Verbrauch|m}}, {{t|de|Verbrauchswert|m}}, {{t+|de|Verzehr|m}}
 * Greek: {{t+|el|κατανάλωση|f|sc=Grek}}
-{{trans-mid}}
 * Italian: {{t+|it|consumo|m}}
+{{trans-mid}}
 * Khmer: {{t|km|បម្រើបម្រាស់|tr=bom rer bom ras|sc=Khmr}}
 * Portuguese: {{t+|pt|consumo|m}}
 * Romanian: {{t+|ro|consum|n}}
@@ -76,6 +77,7 @@ From {{etyl|fro|en}} {{term|consumpcion|lang=fro}}, from {{etyl|la|en}} {{term|c
 * Scottish Gaelic: {{t|gd|caitheamh|f}}
 * Spanish: {{t+|es|consumo|m}}
 * Swedish: {{t+|sv|konsumtion|c}}
+* Tagalog: {{t|tl|pananaid}}
 {{trans-bottom}}
 
 {{trans-top|wasting-away of the human body through disease}}
