--- a/en/p/pledge.7357.wikitext
+++ b/en/p/pledge.7357.wikitext
@@ -61,6 +61,8 @@ From {{etyl|enm|en}} {{m|enm|plege}}, from {{etyl|xno|en}} {{m|fro|plege}}, from
 * Finnish: {{t+|fi|pantata}}
 * French: {{t|fr|mettre en gage}}
 * German: {{t+|de|verpfänden}}
+* Latgalian: {{t|ltg|aizlyka}}
+* Latvian: {{t|lv|ķīla}}
 * Polish: {{t|pl|złożyć zastaw}}
 {{trans-mid}}
 * Russian: {{t|ru|[[отдава́ть]] в [[зало́г]]|impf}}, {{t|ru|[[отда́ть]] в [[зало́г]]|pf}}, {{t+|ru|закла́дывать|impf}}, {{t+|ru|заложи́ть|pf}}
