--- a/en/m/moonlighter.720229.wikitext
+++ b/en/m/moonlighter.720229.wikitext
@@ -6,8 +6,7 @@
 # A person who [[moonlight]]s, or works a second job on the side.
 # {{cx|US|regional|lang=en}} One who [[serenade]]s by moonlight.
 # A [[moonshiner]], who makes illicit alcohol.
-# {{cx|Ireland|historical|lang=en}} One of a [[gang]] who engaged in [[agrarian]] [[outrage]]s by night.
-
+# {{cx|Ireland|historical|lang=en}} One of a gang who used violence, especially at night, to promote [[agrarianism]] in Ireland during the {{w|Land War}} of the late 19th century.
 ====Translations====
 {{trans-top|person who works a second job}}
 * Dutch: {{t+|nl|zwartwerker|m}}
