Added a section <prepackaged#36195820>

--- a/en/p/prepackaged.719989.wikitext
+++ b/en/p/prepackaged.719989.wikitext
@@ -5,6 +5,9 @@
 
 # That has been [[packaged]] prior to being sold
 
+====Hypernyms====
+* [[packaged]]
+
 ====Translations====
 {{trans-top|that has been packaged prior to being sold}}
 * Italian: {{t+|it|preconfezionato}}
