--- a/en/p/PET.26237.wikitext
+++ b/en/p/PET.26237.wikitext
@@ -2,10 +2,10 @@
 ==English==
 
 ===Nouns===
-{{head|en|acronym}}
-# {{context|organic compound|lang=en}} [[polyethylene terephthalate]]
-# [[positron emission tomography|Positron emission tomography]]
-# [[paired-end tag]]
+{{head|en|noun}}
+# {{context|organic compound|lang=en}} {{acronym of|polyethylene terephthalate|lang=en}}
+# {{acronym of|positron emission tomography|lang=en}}
+# {{acronym of|paired-end tag|lang=en}}
 
 ====See also====
 * [[Dacron]]
