--- a/en/p/PET.26237.wikitext
+++ b/en/p/PET.26237.wikitext
@@ -2,7 +2,7 @@
 ==English==
 
 ===Nouns===
-{{head|en|noun|~}}
+{{en-noun|~}}
 # {{context|uncountable|organic compound|lang=en}} {{acronym of|polyethylene terephthalate|lang=en}}
 # {{context|countable|lang=en}} {{acronym of|positron emission tomography|lang=en}}
 # {{context|countable|lang=en}} {{acronym of|paired-end tag|lang=en}}
