--- a/en/e/ermine.8234.wikitext
+++ b/en/e/ermine.8234.wikitext
@@ -119,14 +119,17 @@ Note: The supposed derivation from {{etyl|ML.|-}} {{m|la|mūs}} {{term|Armenius|
 
 {{trans-top|(heraldry) a white field with black spots}}
 * Czech: {{t|cs|hermelín|m}}
+* Dutch: {{t+|nl|hermelijn}}
 * Finnish: {{t|fi|kärpännahka}}
 * French: {{t+|fr|hermine|f}}
 * German: {{t+|de|Hermelin|n}}
 {{trans-mid}}
 * Italian: {{t+|it|armellino|m}}
 * Macedonian: {{t|mk|хермелин|m|tr=hermelín}}
+* Polish: {{t+|pl|gronostaj|m}}
 * Romanian: {{t+|ro|herminat|m|n}}
 * Spanish: {{t+|es|armiño}}
+* Swedish: {{t+|sv|hermelin}}
 {{trans-bottom}}
 
 ===Verb===
