t+ltg:[[truss]] ([[WT:EDIT|Assisted]]) <rabbit#36200454>

--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -126,6 +126,7 @@ From {{etyl|enm|en}} {{term|rabet|lang=enm}}, from {{etyl|frm|en}} dialect (comp
 * Ladin: {{t|lld|conicio}}
 * Ladino: {{t|lad|konejo}}
 * Lao: {{t+|lo|ກະຕ່າຍ|sc=Laoo}}
+* Latgalian: {{t|ltg|truss}}
 * Latin: {{t+|la|cunīculus|m}}
 * Latvian: {{t|lv|trusis}}
 * Lithuanian: {{t+|lt|triušis}}
