--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -124,7 +124,7 @@ From {{etyl|enm|en}} {{term|rabet|lang=enm}}, from {{etyl|frm|en}} dialect (comp
 *: Sorani: {{t|ku|که‌روێشک|tr=kêrwişk}}
 * Kyrgyz: {{t|ky|коён|sc=Cyrl}}
 * Ladin: {{t|lld|conicio}}
-* Ladino: {{t|lad|konejo}}
+* Ladino: {{t|lad|konejo|m}}
 * Lao: {{t+|lo|ກະຕ່າຍ|sc=Laoo}}
 * Latgalian: {{t|ltg|truss}}
 * Latin: {{t+|la|cunīculus|m}}
