--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -175,7 +175,7 @@ From {{etyl|enm|en}} {{term|rabet|lang=enm}}, from {{etyl|frm|en}} dialect (comp
 * Sinhalese: {{t|si|රට හාවෝ|sc=Sinh}}
 * Slovak: {{t|sk|králik|m}}
 * Slovene: {{t+|sl|kunec|m}}
-* Somali: {{t|so|bakayle}}
+* Somali: {{t|so|bakayle|m}}
 * Sorbian:
 *: Lower Sorbian: {{t|dsb|karnikel|m}}
 *: Upper Sorbian: {{t|hsb|nukl|m}}
