--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -202,6 +202,7 @@ From {{etyl|enm|en}} {{term|rabet|lang=enm}}, from {{etyl|frm|en}} dialect (comp
 * Uzbek: {{t+|uz|quyon}}, {{t+|uz|xargo'sh}}
 * Venetian: {{t|vec|cunicio|m}}
 * Vietnamese: {{t+|vi|thỏ}}
+* Vilamovian: {{t|wym|kyngel|m}}
 * Volapük: {{qualifier|♂♀}} {{t+|vo|krolig}}, {{qualifier|♂}} {{t+|vo|hikrolig}}, {{qualifier|♀}} {{t+|vo|jikrolig}}, {{qualifier|♂♀ offspring}} {{t|vo|kroligül}}, {{qualifier|♂ offspring}} {{t|vo|hikroligül}}, {{qualifier|♀ offspring}} {{t|vo|jikroligül}}, {{qualifier|diminutive ♂♀}} {{t|vo|kroligil}}, {{qualifier|diminutive ♂}} {{t|vo|hikroligil}}, {{qualifier|diminutive ♀}} {{t|vo|jikroligil}}
 * Voro: {{t|vor|jänes}}
 * Votic: {{t|vot|jänez}}
