--- a/en/a/advertisement.4312.wikitext
+++ b/en/a/advertisement.4312.wikitext
@@ -10,7 +10,7 @@ From {{etyl|frm|en}} {{term|advertissement||statement calling attention|lang=frm
 ===Pronunciation===
 * {{a|UK}} {{IPA|/ədˈvɜːtɪsmənt/|lang=en}}, occasionally {{IPAchar|/ˈædvətaɪzmənt/|lang=en}}
 * {{audio|Advertisement.ogg|Audio (UK)|lang=en}}
-* {{a|US}} {{IPAchar|/ˈædvɚˌtaɪzmənt/|lang=en}}, rarely {{IPA|/ədˈvɝtɪzmənt/|lang=en}}
+* {{a|US}} {{IPA|/ˈædvɚˌtaɪzmənt/|lang=en}}, rarely {{IPAchar|/ədˈvɝtɪzmənt/|lang=en}}
 * {{audio|en-us-advertisement.ogg|Audio (US)|lang=en}}
 * {{a|NZ}} {{IPA|/ˈædvəˌtʌɪzmənt/|/ədˈvɜːtɪsmənt/|lang=en}}
 * {{hyphenation|ad|ver|tise|ment|lang=en}}
