Reverted edits by [[Special:Contributions/101.191.203.157|101.191.203.157]]. If you think this rollback is in error, please leave a message on my [[User talk:SemperBlotto|talk page]]. <cop#36202604>

--- a/en/c/cop.26062.wikitext
+++ b/en/c/cop.26062.wikitext
@@ -88,11 +88,7 @@ Short for {{m|en|copper||police officer}}, itself from {{m|en||cop|one who cops}
 {{trans-bottom}}
 
 ===Etymology 4===
-{{etyl|ang|en}} {{term|cop|lang=ang}}, {{term|copp|lang=ang}}, from {{etyl|gem-pro|en}} {{m|gem-
-
-COP- Constable of Police
-pro|*kuppaz||vault, basin, round object}}, from {{etyl|ine-pro|en}} 
-{{m|ine-pro|*gu-}}. Cognate with Dutch {{term|kop|lang=nl}}, German {{term|Kopf|lang=de}}.
+{{etyl|ang|en}} {{term|cop|lang=ang}}, {{term|copp|lang=ang}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*kuppaz||vault, basin, round object}}, from {{etyl|ine-pro|en}} {{m|ine-pro|*gu-}}. Cognate with Dutch {{term|kop|lang=nl}}, German {{term|Kopf|lang=de}}.
 
 ====Noun====
 {{en-noun}}
