--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -57,7 +57,7 @@ From earlier {{m|en|iland}}, from {{etyl|enm|en}} {{m|enm|iland}}, {{m|enm|yland
 * Aramaic:
 *: Syriac: {{t|arc|ܓܙܪܬܐ|f|tr=gāzartā’|sc=Syrc}}
 * Armenian: {{t+|hy|կղզի}}
-* Assamese: {{t|as|দ্বীপ|tr=dwip|sc=Beng}}
+* Assamese: {{t|as|দ্বীপ|n|tr=dwip|sc=Beng}}
 * Asturian: {{t+|ast|islla|f}}
 * Aymara: {{t|ay|wat’a}}
 * Azeri: {{t+|az|ada}}
