--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -28,6 +28,7 @@ From {{etyl|enm|en}} {{m|enm|squirel}}, {{m|enm|squyrelle}}, from {{etyl|xno|en}
 
 ====Translations====
 {{trans-top|rodent}}
+* Adyghe: {{t|ady|кӏэпхъ}}
 * Albanian: {{t+|sq|ketër|m}}
 * Algonquin: {{t|alq|adjidamò}}
 * Arabic: {{t|ar|سِنْجَاب|m}}
