--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -163,7 +163,7 @@ From {{etyl|enm|en}} {{m|enm|squirel}}, {{m|enm|squyrelle}}, from {{etyl|xno|en}
 * Uzbek: {{t+|uz|olmaxon}}
 * Venetian: {{t|vec|schirat|m}}
 * Vietnamese: {{t|vi|họ sóc}}, {{t+|vi|sóc}}
-* Vilamovian: {{t|wym|achkienła}}, {{t|wym|ǡh́kjēnła|n}}
+* Vilamovian: {{t|wym|ǡh́kjēnła|n}}
 * Volapük: {{qualifier|♂♀}} {{t+|vo|yat}}, {{qualifier|♂}} {{t|vo|hiyat}}, {{qualifier|♀}} {{t|vo|jiyat}}, {{qualifier|♂♀ offspring, young}} {{t|vo|yatül}}, {{qualifier|♂ offspring, young}} {{t|vo|hiyatül}}, {{qualifier|♀ offspring, young}} {{t|vo|jiyatül}}
 * Welsh: {{t+|cy|gwiwer|f}}
 * West Coast Bajau: {{t|bdr|basing}}
