t+ady:[[хыгъэхъун]] t+ady:[[псыгу]] ([[WT:EDIT|Assisted]]) <island#36209030>

--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -46,6 +46,7 @@ From earlier {{m|en|iland}}, from {{etyl|enm|en}} {{m|enm|iland}}, {{m|enm|yland
 ====Translations====
 {{trans-top|area of land completely surrounded by water}}
 * Abkhaz: {{t|ab|адгьылбжьаха}}
+* Adyghe: {{t|ady|хыгъэхъун}}, {{t|ady|псыгу}}
 * Afrikaans: {{t|af|eiland}}
 * Ainu: {{t|ain|モシㇼ|tr=moshir}}
 * Albanian: {{t+|sq|ishull|m}}, {{t+|sq|ujdhesë|f}}
