--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -85,6 +85,7 @@ From {{etyl|enm|en}} {{term|again|lang=enm}}, {{term|ayain|lang=enm}}, {{m|enm|a
 {{trans-mid}}
 * Low German:
 *: German Low German: {{t+|nds-de|wedder}}
+* Portuguese: {{t|pt|de volta}}
 * Russian: {{t+|ru|наза́д|sc=Cyrl}}, {{t+|ru|обра́тно|sc=Cyrl}}
 {{trans-bottom}}
 
