t+mn:[[цэцэгт байцаа]] ([[WT:EDIT|Assisted]]) <cauliflower#36210932>

--- a/en/c/cauliflower.34088.wikitext
+++ b/en/c/cauliflower.34088.wikitext
@@ -63,6 +63,7 @@ From 16th century {{term|cole-florye|lang=en}}. Compare Latin {{term|caulis|lang
 * Macedonian: {{t|mk|карфио́л|m}}
 * Malay: {{t|ms|kubis bunga}}
 * Maori: {{t|mi|kareparāoa}}
+* Mongolian: {{t|mn|цэцэгт байцаа|sc=Cyrl}}
 * Navajo: {{t|nv|chʼil łigaii}}, {{t|nv|sęęschʼil}}
 * Norwegian:
 *: Bokmål: {{t|nb|blomkål|m}}
