--- a/en/m/mundo.4430.wikitext
+++ b/en/m/mundo.4430.wikitext
@@ -150,6 +150,11 @@ From {{etyl|la|es}} {{m|la|mundus||world}}
 * [[mundial]]
 * [[mundillo]]
 
+====Descendants====
+{{der-top|Descendants}}
+{{etymtree|es|la|mundus}}
+{{der-bottom}}
+
 [[Category:1000 basic Spanish words]]
 
 [[ast:mundo]]
