--- a/en/s/sir.26262.wikitext
+++ b/en/s/sir.26262.wikitext
@@ -160,9 +160,7 @@ From {{etyl|enm|en}} {{m|enm|sir}}, from {{etyl|fro|en}} {{m|fro|sire||master, s
 
 ===See also===
 * [[lord]]
-* [[dame]]
-* [[mister]]
-* [[madam]]
+* {{list:titles/en}}
 
 ===External links===
 * {{R:Webster 1913}}
