--- a/en/p/prosodic.855423.wikitext
+++ b/en/p/prosodic.855423.wikitext
@@ -9,7 +9,7 @@
 * [[prosodiac]], [[prosodiacal]], [[prosodial]], [[prosodical]]
 
 ====Translations====
-{{trans-top|prosody}}
+{{trans-top|relating to prosody}}
 * French: {{t+|fr|prosodique}}
 * German: {{t+|de|prosodisch}}
 * Greek:
@@ -18,7 +18,7 @@
 * Italian: {{t-check|it|prosodiaco}}, {{t|it|prosodico}}
 {{trans-mid}}
 * Latin: {{t|la|prosodiacus}}, {{t-check|la|prosodicus}}
-* Portuguese: {{t|pt|prosodíaco}}
+* Portuguese: {{t|pt|prosódico}}
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|прозо̀дӣјскӣ|sc=Cyrl}}
 *: Roman: {{t+|sh|prozòdījskī}}
