--- a/en/a/advertisement.4312.wikitext
+++ b/en/a/advertisement.4312.wikitext
@@ -73,7 +73,7 @@ From {{etyl|frm|en}} {{m|frm|advertissement||statement calling attention}}, comp
 * German: {{t+|de|Anzeige|f}}, {{t+|de|Werbung|f}}, {{t+|de|Annonce|f}}, {{t|de|Reklameanzeige|f}}
 * Greek: {{t+|el|διαφήμιση|f}}
 * Gullah: {{t|gul|abbuhtizemu’t}}
-* Hebrew: {{t|he|פרסומת|f|tr=pirsomet}}
+* Hebrew: {{t+|he|פִּרְסוֹמֶת|f|tr=pirsómet}}
 * Hindi: {{t|hi|इश्तहार|m|tr=iśtahār|sc=Deva}}
 * Hungarian: {{t+|hu|hirdetés}}, {{t+|hu|reklám}}
 * Icelandic: {{t+|is|auglýsing|f}}
