--- a/en/s/sir.26262.wikitext
+++ b/en/s/sir.26262.wikitext
@@ -111,7 +111,7 @@ From {{etyl|enm|en}} {{m|enm|sir}}, from {{etyl|fro|en}} {{m|fro|sire||master, s
 * Lithuanian: {{t|lt|ponas|m}}
 * Macedonian: {{t|mk|го́сподин|m}}, {{t|mk|госпо́дине|m}} ([[vocative case]])
 * Malay: {{t|ms|tuan}}
-* Maori: {{t|mi|t}}
+* Maori: {{t|mi|tā}}
 * Mongolian: {{t+|mn|ноён|sc=Cyrl}}
 * Mwali Comorian: {{t|wlc|bwana}}
 * Ndzwani Comorian: {{t|wni|mwenye}}
