--- a/en/c/cauliflower.34088.wikitext
+++ b/en/c/cauliflower.34088.wikitext
@@ -59,7 +59,7 @@ From 16th century {{term|cole-florye|lang=en}}. Compare Latin {{term|caulis|lang
 * Norman: {{t|nrf|chou-flieur|m}}
 * Korean: {{t|ko|꽃양배추|tr=kkotyangbaechu|sc=Hang}}
 * Latvian: {{t|lv|ziedkāposts|m}}
-* Lithuanian: {{t|lt|žiedinis kopūstas|m}}
+* Lithuanian: {{t|lt|žiedinis kopūstas|m}}, {{t|lt|žiedbastučiai|m-p}}
 * Macedonian: {{t|mk|карфио́л|m}}
 * Malay: {{t|ms|kubis bunga}}
 * Maori: {{t|mi|kareparāoa}}
