--- a/en/c/cop.26062.wikitext
+++ b/en/c/cop.26062.wikitext
@@ -186,6 +186,20 @@ A shortened form of [[copain]].
 ===External links===
 * {{R:SDK}}
 
+----
+
+==Volapük==
+
+===Noun===
+{{vo-noun}}
+
+# {{context|tools|lang=vo}} [[hoe]]
+
+====Declension====
+{{vo-decl-noun}}
+
+[[Category:vo:Gardening]]
+
 [[ca:cop]]
 [[cs:cop]]
 [[de:cop]]
