/* Turkish */ Add external links <at#36638801>

--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -732,6 +732,9 @@ From {{etyl|otk|tr}} ''at'', from {{etyl|trk-pro|tr}} {{m|trk-pro|*at}}, {{m|trk
 ====Antonyms====
 * {{l|tr|atma}}
 
+===External links===
+* {{R:TDK}}
+
 [[Category:tr:Equids]]
 
 ----
