t+yi:[[טעאָריע]] ([[WT:EDIT|Assisted]]) <theory#36672327>

--- a/en/t/theory.7354.wikitext
+++ b/en/t/theory.7354.wikitext
@@ -151,6 +151,7 @@ In scientific discourse, the sense “unproven conjecture” is discouraged (wit
 * Tagalog: {{t|tl|huna}}
 * Turkish: {{t+|tr|kuram}}, {{t+|tr|nazariye}} {{qualifier|obsolecent}}, {{t+|tr|teori}}
 * Volapük: {{t+|vo|teorod}}
+* Yiddish: {{t|yi|טעאָריע|f}}
 {{trans-bottom}}
 
 {{trans-top|an unproven conjecture}}
@@ -186,6 +187,7 @@ In scientific discourse, the sense “unproven conjecture” is discouraged (wit
 * Tagalog: {{t|tl|huna}}
 * Turkish: {{t+|tr|kuram}}, {{t+|tr|nazariye}} {{qualifier|obsolecent}}, {{t+|tr|teori}}
 * Volapük: {{t+|vo|teor}}
+* Yiddish: {{t|yi|טעאָריע|f}}
 {{trans-bottom}}
 
 {{trans-top|a field of study in mathematics}}
