--- a/en/b/badger.8231.wikitext
+++ b/en/b/badger.8231.wikitext
@@ -51,7 +51,7 @@ From {{etyl|enm|en}} {{m|enm|bageard||marked by a badge}}, from {{m|enm|bage||ba
 * Bulgarian: {{t+|bg|я́зовец|m|sc=Cyrl}}
 * Catalan: {{t|ca|teixó|m}}
 * Chechen: {{t|ce|дIама|sc=Cyrl}}
-* Cherokee: {{t|chr|ᎢᏃᎵ|tr=inoli|sc=Cher}}
+* Cherokee: {{t|chr|ᎢᏃᎵ}}
 * Chinese:
 *: Mandarin: {{t+|cmn|獾|tr=huān|sc=Hani}}
 * Cornish: {{t|kw|brogh|f}}
@@ -83,13 +83,12 @@ From {{etyl|enm|en}} {{m|enm|bageard||marked by a badge}}, from {{m|enm|bage||ba
 *: Kurmanji: {{t+|kmr|kurbeşk}}
 * Ladin: {{t|lld|tas}}
 * Lakota: {{t|lkt|ȟoká}}
-{{trans-mid}}
 * Latin: {{t|la|mēles|f}}
 * Latvian: {{t+|lv|āpsis|m}}
+{{trans-mid}}
 * Lithuanian: {{t+|lt|barsukas}}, {{t|lt|opšrus}}
 * Low German:
 *: German Low German: {{t|nds-de|tacks|m}}, {{t|nds-de|daks}}
-* Lower Sorbian: {{t|dsb|jazw}}, {{t|dsb|šwińc}}
 * Macedonian: {{t|mk|ја́зовец|m}}
 * Malay: {{t|ms|bejar}}
 * Manx: {{t|gv|broc}}
@@ -107,7 +106,8 @@ From {{etyl|enm|en}} {{m|enm|bageard||marked by a badge}}, from {{m|enm|bage||ba
 * Romanian: {{t+|ro|viezure|m}}, {{t+|ro|bursuc|m}}
 * Romansch: {{t|rm|tais}}
 * Russian: {{t+|ru|барсу́к|m}}
-* Sami: [[mievri]]
+* Sami:
+*: Northern Sami: {{t|se|mievri}}
 * Sardinian: {{t|sc|tassu}}, {{t|sc|cane de ribu}}
 * Saterland Frisian: {{t|stq|taks}}
 * Scottish Gaelic: {{t|gd|broc|m}}
@@ -117,16 +117,18 @@ From {{etyl|enm|en}} {{m|enm|bageard||marked by a badge}}, from {{m|enm|bage||ba
 * Seri: {{t|sei|ziix hant ctaxoj}}, {{t|sei|xeezej}}
 * Slovak: {{t|sk|jazvec|m}}
 * Slovene: {{t+|sl|jazbec|m}}
+* Sorbian:
+*: Lower Sorbian: {{t|dsb|jazw}}, {{t|dsb|šwińc}}
+*: Upper Sorbian: {{t|hsb|šwinc|m}}
 * Spanish: {{t+|es|tejón|m}}
 * Swahili: {{t|sw|melesi}}
 * Swedish: {{t+|sv|grävling|c}}
 * Taos: {{t|twf|kòlno’óna}}
 * Turkish: {{t+|tr|porsuk}}
 * Ukrainian: {{t+|uk|борсу́к|m|sc=Cyrl}}
-* Upper Sorbian: {{t|hsb|šwinc|m}}
 * Vietnamese: {{t|vi|con lửng}}
 * Volapük: {{t+|vo|daf}}
-* Welsh: {{t+|cy|moch daear|alt=mochyn daear|m}}, {{t+|cy|broch|m}}, {{t+|cy|daearfoch|alt=daearfochyn|m}}
+* Welsh: {{t+|cy|moch daear|alt=mochyn daear|m}}, {{t+|cy|broch|m}}, {{t+|cy|[[daearfoch]]yn|m}}
 * West Frisian: {{t+|fy|das|c}}
 * Zazaki: {{t|zza|hermuşık}}, {{t|zza|xermuşık}}
 {{trans-bottom}}
