/* Translations */cleanup using [[Project:AWB|AWB]] <island#36828585>

--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -83,8 +83,8 @@ From earlier {{m|en|iland}}, from {{etyl|enm|en}} {{m|enm|iland}}, {{m|enm|yland
 *: Min Nan: {{t+|nan|島嶼|tr=tó-sū|sc=Hans}}, {{t|nan|島|tr=tó, tóo|sc=Hans}}
 * Chuvash: {{t|cv|утрав}}
 * Coptic:
-*: {{ttbc|Bohairic}}<!-- name not recognised by xte: update [[Template:scriptrev]] or [[Template:langrev]] and [[Module:languages]] appropriately or report to [[User talk:Kephir/gadgets/xte]] -->: {{t|cop|ⲙⲟⲩⲓ|f|tr=mwi}}, {{t|cop|ⲛⲏⲥⲟⲥ|f|tr=nisos}}
-*: {{ttbc|Sahidic}}<!-- name not recognised by xte: update [[Template:scriptrev]] or [[Template:langrev]] and [[Module:languages]] appropriately or report to [[User talk:Kephir/gadgets/xte]] -->: {{t|cop|ⲙⲟⲩⲉ|f|tr=mwe}}, {{t|cop|ⲛⲏⲥⲟⲥ|f|tr=nisos}}
+*: Bohairic: {{t|cop|ⲙⲟⲩⲓ|f|tr=mwi}}, {{t|cop|ⲛⲏⲥⲟⲥ|f|tr=nisos}}
+*: Sahidic: {{t|cop|ⲙⲟⲩⲉ|f|tr=mwe}}, {{t|cop|ⲛⲏⲥⲟⲥ|f|tr=nisos}}
 * Corsican: {{t|co|isula|f}}
 * Cree: {{t|cr|ᒥᓂᔥᑎᒄ|tr=minishtikw}}
 * Crimean Tatar: {{t|crh|ada}}
