dead link <sausage dog#36862239>

--- a/en/s/sausage dog.856242.wikitext
+++ b/en/s/sausage dog.856242.wikitext
@@ -1,9 +1,9 @@
 ==English==
 
 ===Noun===
-{{en-noun|head=[[sausage]] [[dog]]}}
+{{en-noun}}
 
-# The [[dachshund]]
-# An [[insulating]] item in the shape of a dog, used to stop draughts entering under doors.[http://www.cathkidston.co.uk/ProductDetails.aspx?pid=89-202-4-4&language=en-GB]
+# The [[dachshund]].
+# A [[draught excluder]] in the shape of a dog.
 
 [[Category:en:Dogs]]
