Fixing quote template which has both [[Category:Quotation templates using both date and year|date= and year= parameters]]. <miss out#36894824>

--- a/en/m/miss out.802552.wikitext
+++ b/en/m/miss out.802552.wikitext
@@ -8,8 +8,7 @@
 #: ''Anybody who does not try the homemade ice cream is really '''missing out'''.''
 #: ''I think he's going to '''miss out''' on the opportunity to date her if he doesn't hurry.''
 #* {{quote-news
-|year=2012
-|date=May 5
+|date=May 5, 2012
 |author=Phil McNulty
 |title=Chelsea 2-1 Liverpool
 |work=BBC Sport
