t+mi:[[wītara]] t+mi:[[wīhara]] t+mi:[[tori uaroa]] ([[WT:EDIT|Assisted]]) <weasel#36898188>

--- a/en/w/weasel.8232.wikitext
+++ b/en/w/weasel.8232.wikitext
@@ -104,6 +104,7 @@ The verb comes from the supposed cunningness of the weasel.
 * Hungarian: {{t+|hu|menyét}}
 * Indonesian: {{t+|id|cerpelai}}
 {{trans-mid}}
+* Maori: {{t|mi|wītara}}, {{t|mi|wīhara}}, {{t|mi|tori uaroa }}
 * Navajo: {{t|nv|dlǫ́ʼii}}
 * Portuguese: {{t+|pt|doninha|f}}
 * Scottish Gaelic: {{t|gd|neas|f}}
