--- a/en/s/stoat.8235.wikitext
+++ b/en/s/stoat.8235.wikitext
@@ -25,6 +25,9 @@ mid-15c., ''[[stote]]'', ("the ermine, especially in its brown summer coat"), of
 
 ====Translations====
 {{trans-see|stoat|ermine}}
+{{trans-top|}}
+{{trans-mid}}
+{{trans-bottom}}
 
 ===Anagrams===
 * [[toast#English|toast]]
