Fixing quote template which has both [[Category:Quotation templates using both date and year|date= and year= parameters]]. <staff#36913182>

--- a/en/s/staff.34070.wikitext
+++ b/en/s/staff.34070.wikitext
@@ -22,7 +22,7 @@ From {{etyl|enm|en}} {{m|enm|staf}}, from {{etyl|ang|en}} {{m|ang|stæf}}, from 
 |passage=The case was that of a murder. It had an element of mystery about it, however, which was puzzling the authorities. A turban and loincloth soaked in blood had been found; also a '''staff'''.}}
 # {{label|en|music|plural [[staves]]}} A [[series]] of [[horizontal]] [[line]]s on which [[music]]al [[note]]s are written.
 # {{label|en|plural staff}} The [[employee]]s of a [[business]].
-#* {{quote-news|year=2011|date=December 16|author=Denis Campbell|work=Guardian
+#* {{quote-news|date=December 16, 2011|author=Denis Campbell|work=Guardian
 |title=[http://www.guardian.co.uk/society/2011/dec/16/hospital-staff-dementia-patients Hospital staff 'lack skills to cope with dementia patients']
 |passage=Most '''staff''' do not have the skills to cope with such challenging patients, who too often receive "impersonal" care and suffer from boredom, the first National Audit of Dementia found. It says hospitals should introduce "dementia champions".}}
 #: {{ux|en|The company employed 10 new members of '''staff''' this month.}}
