t+bho:[[द्वीप]] t+gn:[[ypa'ũ]] t+gsw:[[Insle]] t+chm:[[отро]] t+tcs:[[ailan]] t+ce:[[гӏайре]] t+nah:[[tlālhuāctli]] t+nso:[[sehlakehlake]] ([[WT:EDIT|Assisted]]) <island#36917342>

--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -69,6 +69,7 @@ From earlier {{m|en|iland}}, from {{etyl|enm|en}} {{m|enm|iland}}, {{m|enm|yland
 * Bats: {{t|bbl|გუბ}}
 * Belarusian: {{t|be|во́страў|m}}, {{qualifier|small}} {{t|be|вы́спа|f}}
 * Bengali: {{t|bn|দ্বীপ|tr=dip|sc=Beng}}
+* Bhojpuri: {{t|bho|द्वीप|tr=dvīpa}}
 * Bislama: {{t|bi|aelan}}
 * Breton: {{t+|br|enez}}
 * Bulgarian: {{t+|bg|о́стров|m}}
@@ -76,6 +77,7 @@ From earlier {{m|en|iland}}, from {{etyl|enm|en}} {{m|enm|iland}}, {{m|enm|yland
 * Catalan: {{t+|ca|illa|f}}
 * Central Melanau: {{t|mel|pulau}}
 * Chamicuro: {{t|ccc|yishla}}
+* Chechen: {{t|ce|гӏайре}}
 * Cherokee: {{t+|chr|ᎠᎽᏰᎵ|sc=Cher}}
 * Chichewa: {{t|ny|chilumba}}
 * Chinese:
@@ -107,8 +109,10 @@ From earlier {{m|en|iland}}, from {{etyl|enm|en}} {{m|enm|iland}}, {{m|enm|yland
 * Galician: {{t+|gl|illa|f}}
 * Georgian: {{t|ka|კუნძული}}
 * German: {{t+|de|Insel|f}}, {{qualifier|poetic}} {{t+|de|Eiland|n}}
+*: Alemannic German: {{t|gsw|Insle|f}}
 * Greek: {{qualifier|formal}} {{t+|el|νήσος|f}}, {{t+|el|νησί|n}}
 *: Ancient: {{t|grc|νῆσος|f}}
+* Guaraní: {{t|gn|ypa'ũ}}
 * Gujarati: {{t|gu|દ્વીપ|tr=dvīp|sc=Gujr}}
 * Haitian Creole: {{t|ht|zile}}, {{t|ht|zil}}
 * Hausa: {{t|ha|tsibiri}}
@@ -168,9 +172,12 @@ From earlier {{m|en|iland}}, from {{etyl|enm|en}} {{m|enm|iland}}, {{m|enm|yland
 * Maori: {{t|mi|motu}}
 * Mapudungun: {{t|arn|wapi}}
 * Marathi: {{t|mr|बेट|n|tr=veṭ|sc=Deva}}
+* Mari:
+*: Eastern Mari: {{t|chm|отро}}
 * Mirandese: {{t|mwl|ilha|f}}
 * Mizo: {{t|lus|thliarkar}}
 * Mongolian: {{t+|mn|арал}}
+* Nahuatl: {{t|nah|tlālhuāctli}}
 * Nepali: {{t|ne|द्वीप|m|tr=dvīpa|sc=Deva}}, {{t|ne|टापू|tr=ṭāpū|sc=Deva}}
 * Ngazidja Comorian: {{t|zdj|siwa|c5|c6}}
 * Niuean: {{t|niu|motu}}
@@ -179,6 +186,7 @@ From earlier {{m|en|iland}}, from {{etyl|enm|en}} {{m|enm|iland}}, {{m|enm|yland
 *: Föhr-Amrum: {{t|frr|eilun|n}}
 *: Helgoland: {{t|frr|Ailun|n}}, {{t|frr|Eelun|n}}
 *: Mooring: {{t|frr|ailönj|n}}
+* Northern Sotho: {{t|nso|sehlakehlake}}
 * Northern Thai: {{t-needed|nod}}
 * Norwegian:
 *: Bokmål: {{t+|nb|øy|m|f}}
@@ -246,6 +254,7 @@ From earlier {{m|en|iland}}, from {{etyl|enm|en}} {{m|enm|iland}}, {{m|enm|yland
 * Tigrinya: {{t|ti|ደሴት|f|sc=Ethi}}
 * Tok Pisin: {{t|tpi|ailan}}
 * Tongan: {{t|to|motu}}
+* Torres Strait Creole: {{t|tcs|ailan}}
 * Tuamotuan: {{t|pmt|motu}}
 * Turkish: {{t+|tr|ada}}, {{t+|tr|aral}}
 * Turkmen: {{t+|tk|ada}}
