--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -71,7 +71,7 @@ From earlier {{m|en|iland}}, from {{etyl|enm|en}} {{m|enm|iland}}, {{m|enm|yland
 * Bengali: {{t|bn|দ্বীপ|tr=dip|sc=Beng}}
 * Bhojpuri: {{t|bho|द्वीप|tr=dvīpa}}
 * Bislama: {{t|bi|aelan}}
-* Breton: {{t+|br|enez}}
+* Breton: {{t+|br|enez|f}}
 * Bulgarian: {{t+|bg|о́стров|m}}
 * Burmese: {{t+|my|ကျွန်း}}
 * Catalan: {{t+|ca|illa|f}}
