/* Translations */ <second coming#36944241>

--- a/en/s/second coming.746616.wikitext
+++ b/en/s/second coming.746616.wikitext
@@ -17,7 +17,7 @@
 {{trans-top|the return of Jesus Christ}}
 * Chinese:
 *: Mandarin: {{t-needed|cmn}}
-* Finnish: {{t|fi|toinen tuleminen}}
+* Finnish: {{t|fi|[[toinen]] [[tuleminen]]}}
 * French: {{t+|fr|retour}}
 * Greek: {{t|el|Δευτέρα Παρουσία}}
 {{trans-mid}}
