# {{label|en|intransitive|figurative}} To churn or foment, as if wishing to rise to the surface. #: ''Rage '''bubbled''' inside him.'' <bubble#36956924>

--- a/en/b/bubble.7366.wikitext
+++ b/en/b/bubble.7366.wikitext
@@ -286,6 +286,8 @@ Partly imitative, also influenced by {{m|en|burble}}. Compare Middle Dutch {{m|d
 {{en-verb|bubbl}}
 
 # {{label|en|intransitive}} To produce bubbles, to rise up in bubbles (such as in foods cooking or liquids boiling).
+# {{label|en|intransitive|figurative}} To churn or foment, as if wishing to rise to the surface.
+#: ''Rage '''bubbled''' inside him.''
 # {{label|en|transitive|archaic}} To [[cheat]], [[delude]].
 #* '''1749''', Henry Fielding, ''Tom Jones'', Folio Society 1973, p. 443:
 #*: No, no, friend, I shall never be '''bubbled''' out of my religion in hopes only of keeping my place under another government {{...}}
