/* Noun */templatize ref using [[Project:AWB|AWB]] <mill#37047862>

--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -26,8 +26,8 @@ From {{etyl|enm|en}} {{m|enm|mille}}, {{etyl|ang|en}} {{m|ang|mylen}}, from {{et
 #: {{ux|en|a steel '''mill'''}}
 # A building housing such a plant.
 # An establishment that handles a certain type of situation routinely, such as a divorce mill, etc.
-# {{label|en|informal}} an [[engine]] <!--http://oxforddictionaries.com/definition/english/mill-->
-# {{label|en|informal}} a boxing match, [[fistfight]] <!--http://oxforddictionaries.com/definition/english/mill-->
+# {{label|en|informal}} An [[engine]].<!--{{R:ODO}}-->
+# {{label|en|informal}} A boxing match, [[fistfight]].<!--{{R:ODO}}-->
 #: {{quote-book|year=1914
 |year_published='''2009'''
 |edition=HTML
