t+fr:[[au parfum]] ([[WT:EDIT|Assisted]]) <in the know#37118934>

--- a/en/i/in the know.742284.wikitext
+++ b/en/i/in the know.742284.wikitext
@@ -27,7 +27,7 @@
 * Dutch: {{t|nl|ingeweid}}
 * Estonian: {{t|et|teadlik}}
 * Finnish: {{t+|fi|tietävä}}
-* French: {{t+|fr|au courant}}
+* French: {{t+|fr|au courant}}, {{t|fr|au parfum}} {{qualifier|colloquial}}
 * German: {{t+|de|eingeweiht}}
 {{trans-mid}}
 * Hindi: {{t-needed|hi}}
