t+af:[[eekhorinkie]] t+az:[[sincab]] t+ta:[[அணில்]] t+chy:[[no'ee'e]] ([[WT:EDIT|Assisted]]) <squirrel#37121749>

--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -29,6 +29,7 @@ From {{etyl|enm|en}} {{m|enm|squirel}}, {{m|enm|squyrelle}}, from {{etyl|xno|en}
 ====Translations====
 {{trans-top|rodent}}
 * Adyghe: {{t|ady|кӏэпхъ}}
+* Afrikaans: {{t|af|eekhorinkie}}
 * Albanian: {{t+|sq|ketër|m}}
 * Algonquin: {{t|alq|adjidamò}}
 * Arabic: {{t|ar|سِنْجَاب|m}}
@@ -38,6 +39,7 @@ From {{etyl|enm|en}} {{m|enm|squirel}}, {{m|enm|squyrelle}}, from {{etyl|xno|en}
 *: Old Armenian: {{t|xcl|սկիւռ}}
 * Aromanian: {{t|rup|viviritsã|f}}
 * Asturian: {{t|ast|esquilu|m}} {{qualifier|Cantabrian}}
+* Azeri: {{t+|az|sincab}}
 * Bakung: {{t|xkl|pu'an}}
 * Bashkir: {{t|ba|тейен}}
 * Basque: {{t+|eu|katagorri}}, {{t+|eu|urtxintxa}}
@@ -48,6 +50,7 @@ From {{etyl|enm|en}} {{m|enm|squirel}}, {{m|enm|squyrelle}}, from {{etyl|xno|en}
 * Catalan: {{t|ca|esquirol|m}}
 * Central Mazahua: {{t|maz|mijñi}}
 * Cherokee: {{t|chr|ᏌᎳᎵ|tr=salali|sc=Cher}}
+* Cheyenne: {{t|chy|no'ee'e}}
 * Chinese:
 *: Mandarin: {{t+|cmn|松鼠|tr=sōngshǔ|sc=Hani}}, {{t+|cmn|灰鼠|tr=huīshǔ|sc=Hani}}, {{t+|cmn|栗鼠|tr=lìshǔ|sc=Hani}}
 * Chuvash: {{t|cv|пакша}}
@@ -151,6 +154,7 @@ From {{etyl|enm|en}} {{m|enm|squirel}}, {{m|enm|squyrelle}}, from {{etyl|xno|en}
 * Swedish: {{t+|sv|ekorre|c}}
 * Tagal Murut: {{t|mvv|kaitan}}
 * Tagalog: {{t|tl|mutit}}, {{t|tl|bising}}, {{t|tl|ardilya}}
+* Tamil: {{t+|ta|அணில்|sc=Taml}}
 * Taos: {{t|twf|c’ùwala’ána}}
 * Tatar: {{t+|tt|тиен}}
 * Telugu: {{t+|te|ఉడుత}}
