--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -107,7 +107,7 @@ From {{etyl|enm|en}} {{m|enm|squirel}}, {{m|enm|squyrelle}}, from {{etyl|xno|en}
 * Lojban: {{t|jbo|ricyratcu}}
 * Low German:
 *: German Low German: {{t|nds-de|Katteker|m}}
-* Luxembourgish: {{t+|lb|Kaweechelchen}}
+* Luxembourgish: {{t+|lb|Kaweechelchen|n}}
 * Macedonian: {{t|mk|верверица|f}}
 * Malay:
 *: Rumi: {{t|ms|tupai}}, {{t|ms|bajing}}
