t+su:[[bajing]] ([[WT:EDIT|Assisted]]) <squirrel#37123554>

--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -164,6 +164,7 @@ From {{etyl|enm|en}} {{m|enm|squirel}}, {{m|enm|squyrelle}}, from {{etyl|xno|en}
 * Southern Altai: {{t|alt|тийиҥ|tr=tiyiñ|sc=Cyrl}}
 * Spanish: {{t+|es|ardilla|f}}
 * Sranan Tongo: {{t|srn|ekosi}}
+* Sundanese: {{t+|su|bajing}}
 * Swahili: {{qualifier|nc 9/10}} {{t-check|sw|kindi}}
 * Swedish: {{t+|sv|ekorre|c}}
 * Tagal Murut: {{t|mvv|kaitan}}
